--- a/Localizations/Arabic.lang
+++ b/Localizations/Arabic.lang
@@ -1,116 +1,124 @@
 {
-	downloading = "التنزيل قيد التقدم",
 	CPUArchitecture = "بنية وحدة المعالجة المركزية",
 	RAMControl = "التحكم في ذاكرة الوصول العشوائي",
-	packageUnloading = "التفريغ التلقائي",
-	networkFTPNewConnection = "اتصال FTP",
-	networkFTPConnections = "اتصالات FTP",
-	networkFTPAddress = "عنوان الخادم",
-	networkFTPPort = "منفذ الخادم",
-	networkFTPUser = "المستخدم",
-	networkFTPPassword = "كلمة المرور",
-	updatingFileList = "تحديث قائمة الملفات ...",
-	network = "الشبكة",
-	networkTimeout = "الكمبيوتر البعيد لا يستجيب",
-	networkAccessDenied = "تم رفض الوصول إلى نظام ملفات الكمبيوتر البعيد. اتصل بمالكها للحصول على الامتيازات المناسبة",
-	networkAllowReadAndWrite = "الوصول إلى نظام الملفات",
-	networkModemNotAvailable = "إرفاق مودم لاستخدام وظائف الشبكة",
-	networkState = "تمكين وضع الشبكة",
-	networkComputers = "خيارات أجهزة الكمبيوتر على الشبكة",
-	networkName = "اسم هذا الكمبيوتر",
-	networkSearchRadius = "نصف قطر البحث",
-	openWith = "فتح باستخدام",
-	select = "اختر التطبيق ...",
-	keepInDock = "​​احتفظ به في قفص الاتهام",
-	closeAllWindows = "أغلق جميع النوافذ",
-	closeWindow = "أغلق",
-	newWindow = "نافذة جديدة",
-	launch = "تشغيل",
-	launchWithArguments = "بدء باستخدام الوسائط",
-	dontShowAnymore = "لا تظهر مرة أخرى",
-	newName = "اسم جديد",
-	folderName = "اسم المجلد",
-	fileName = "اسم الملف",
+	aboutSystem = "حول النظام",
+	addToDock = "أضف إلى Dock",
+	addToFavourites = "أضف إلى المفضلة",
+	additionalInfo = "معلومة اضافية",
+	alreadyExists = "موجود مسبقا",
 	applicationName = "اسم التطبيق",
-	file = "الملف",
-	notExists = "غير موجود",
-	alreadyExists = "موجود بالفعل",
-	inDirectory = "في المجلد",
-	needReplace = "استبداله؟",
-	yes = "نعم",
-	no = "لا",
-	cancel = "إلغاء",
-	open = "فتح",
-	applyToAll = "تطبيق على الكل",
-	toDirectory = "على المجلد",
+	applyToAll = "تنطبق على الجميع",
+	archive = "أضف إلى الأرشيف",
+	areYouSure = "هل أنت واثق؟",
+	calculatingSize = "جارٍ الحساب…",
+	cancel = "يلغي",
+	closeAllWindows = "أغلق كل النوافذ",
+	closeWindow = "يغلق",
+	copy = "ينسخ",
 	copying = "نسخ",
-	faylaBlyad = "ملف ",
-	areYouSure = "هل أنت متأكد؟",
-	emptyTrash = "إفراغ سلة المهملات",
-	type = "النوع",
-	size = "الحجم",
-	date = "التاريخ",
-	name = "الاسم",
-	path = "المسار",
-	folder = "المجلد",
-	unknown = "غير معروف",
-	calculatingSize = "الحساب ... ",
-	properties = "الخصائص",
-	newFolderFromChosen = "مجلد جديد من اختيار",
 	create = "جديد",
-	newFolder = "المجلد",
+	createShortcut = "انشاء اختصار",
+	cut = "يقطع",
+	date = "تاريخ",
+	delete = "حذف",
+	dontShowAnymore = "لا تظهر مرة أخرى",
+	downloading = "التنزيل قيد التقدم",
+	edit = "تعديل",
+	editInPhotoshop = "تحرير في Photoshop",
+	editShortcut = "تحرير الاختصار",
+	emptyTrash = "صفيحة قمامة فارغة",
+	errorWhileRunningProgram = "خطأ أثناء الجري",
+	favourite = "المفضل",
+	faylaBlyad = "ملف",
+	file = "ملف",
+	fileName = "اسم الملف",
+	flashEEPROM = "فلاش إلى EEPROM",
+	flashingEEPROM = "الوميض قيد التقدم. ",
+	folder = "مجلد",
+	folderName = "إسم الملف",
+	inCurrentDirectory = "في المجلد الحالي",
+	inDirectory = "في المجلد",
+	keepInDock = "ابق في قفص الاتهام",
+	launch = "يطلق",
+	launchWithArguments = "ابدأ بالحجج",
+	logout = "تسجيل خروج",
+	mounts = "يتصاعد",
+	moveLeft = "تحرك يسارا",
+	moveRight = "تحرك يمينا",
+
+	name = "اسم",
+	needReplace = "استبدلها؟",
+	network = "شبكة",
+	networkAccessDenied = "تم رفض الوصول إلى نظام ملفات الكمبيوتر البعيد. ",
+	networkAllowReadAndWrite = "الوصول إلى نظام الملفات",
+	networkComputers = "خيارات أجهزة كمبيوتر الشبكة",
+	networkFTPAddress = "عنوان المستقبل",
+	networkFTPConnections = "اتصالات FTP",
+	networkFTPNewConnection = "اتصال FTP",
+	networkFTPPassword = "كلمه السر",
+
+	networkFTPPort = "منفذ الخادم",
+	networkFTPUser = "مستخدم",
+	networkModemNotAvailable = "قم بتوصيل مودم لاستخدام وظائف الشبكة",
+	networkName = "اسم هذا الكمبيوتر",
+	networkSearchRadius = "البحث عن دائرة نصف قطرها",
+	networkState = "تمكين وضع الشبكة",
+	networkTimeout = "الكمبيوتر البعيد لا يستجيب",
+	newApplication = "تطبيق MineOS",
 	newFile = "ملف",
 	newFileFromURL = "ملف من URL",
-	newImage = "Image",
-	newApplication = "تطبيق MineOS",
-	paste = "لصق",
-	copy = "نسخ",
-	cut = "قص",
-	edit = "تحرير",
-	editInPhotoshop = "تحرير في Photoshop",
-	rename = "إعادة تسمية",
-	editShortcut = "تحرير الاختصار",
-	createShortcut = "إنشاء اختصار",
-	addToDock = "إضافة إلى Dock",
-	removeFromDock = "إزالة من Dock",
-	moveRight = "نقل إلى اليمين",
-	moveLeft = "تحريك يسار",
-	archive = "إضافة إلى الأرشيف",
-	delete = "حذف",
-	addToFavourites = "إضافة إلى المفضلة",
-	removeFromFavourites = "إزالة fr om المفضلة",
-	setAsWallpaper = "تعيين كخلفية",
-	showPackageContent = "إظهار محتوى الحزمة",
-	showContainingFolder = "إظهار المجلد الذي يحتوي على",
-	flashEEPROM = "فلاش إلى EEPROM",
-	flashingEEPROM = "الوميض قيد التقدم. لا تقم بإيقاف تشغيل الكمبيوتر ...",
-	print3D = "نموذج الطباعة ",
-	sortBy = "الفرز",
-	sortByType = "حسب النوع",
-	sortByName = "بالاسم",
-	sortByDate = "حسب التاريخ",
-	aboutSystem = "حول النظام",
-	updates = "التحديثات",
-	update = "التحديث",
-	shutdown = "إيقاف التشغيل",
-	logout = "تسجيل الخروج",
-	reboot = "إعادة التشغيل ",
-	shortcutIsCorrupted = "الاختصار مرتبط بملف غير موجود",
-	sortAutomatically = "محاذاة للشبكة",
+	newFolder = "مجلد",
+	newFolderFromChosen = "مجلد جديد من المختار",
+	newImage = "صورة",
+	newName = "اسم جديد",
+	newWindow = "نافذة جديدة",
+	no = "لا",
+	notExists = "لا يوجد",
 	onDesktop = "على سطح المكتب",
-	inCurrentDirectory = "في المجلد الحالي",
-	errorWhileRunningProgram = "خطأ أثناء تشغيل ",
-	sendedFeedback = "ملاحظات تم إرساله",
-	sendFeedback = "إرسال ملاحظات",
-	yourContacts = "جهات الاتصال الخاصة بك",
-	additionalInfo = "معلومات إضافية",
-	stackTraceback = "Stack traceback ",
-	favourite = "المفضلة",
+	open = "يفتح",
+	openWith = "مفتوحة مع",
+	packageUnloading = "التفريغ التلقائي",
+	paste = "معجون",
+	pasteName = "اسم الصق",
+	path = "طريق",
+	print3D = "نموذج الطباعة",
+	properties = "ملكيات",
+	reboot = "اعادة التشغيل",
+	removeFromDock = "إزالة من قفص الاتهام",
+	removeFromFavourites = "إزالة من المفضلة",
+	rename = "إعادة تسمية",
+
 	search = "بحث",
-	mounts = "Mounts",
+	select = "اختر التطبيق ...",
+	sendFeedback = "ارسل رأيك",
+	sendedFeedback = "تم إرسال الملاحظات",
+
+	setAsWallpaper = "تعيين كخلفية",
+	shortcutIsCorrupted = "الاختصار مرتبط بملف غير موجود",
+	showContainingFolder = "إظهار المجلد الذي يحتوي على",
+	showPackageContent = "إظهار محتوى الحزمة",
+	shutdown = "اغلق",
+	size = "مقاس",
+
+	sortAutomatically = "محاذاة الشبكة",
+	sortBy = "نوع",
+	sortByDate = "حسب التاريخ",
+	sortByName = "بالاسم",
+
+	sortByType = "حسب النوع",
+	stackTraceback = "التتبع المكدس",
+	toDirectory = "إلى مجلد",
+	type = "يكتب",
+	unknown = "مجهول",
+	update = "تحديث",
+
+	updates = "التحديثات",
+	updatingFileList = "جارٍ تحديث قائمة الملفات ...",
 	uploadToPastebin = "تحميل إلى Pastebin",
-	pasteName = "لصق الاسم",
-	uploading = "جاري التحميل...",
-	uploadingSuccess = "تم الرفع إلى ",
-	uploadingFailure = "فشل التحميل: "
+
+	uploading = "جارٍ التحميل ...",
+	uploadingFailure = "فشل التحميل:",
+	uploadingSuccess = "تحميلها على",
+	yes = "نعم",
+	yourContacts = "جهات الاتصال الخاصة بك",
 }
