--- a/Localizations/Bengali.lang
+++ b/Localizations/Bengali.lang
@@ -1,115 +1,124 @@
 {
-	downloading = "ডাউনলোডের প্রক্রিয়া চলছে",
 	CPUArchitecture = "সিপিইউ আর্কিটেকচার",
-	RAMControl = "র‌্যাম নিয়ন্ত্রণ",
-	packageUnloading = "স্বয়ংক্রিয় আনলোড হচ্ছে",
-	networkFTPNewConnection = "এফটিপি-সংযোগ",
-	networkFTPConnections = "এফটিপি-সংযোগ",
-	networkFTPAddress = "সার্ভারের ঠিকানা",
-	networkFTPPort = "সার্ভার পোর্ট",
-	networkFTPUser = "ব্যবহারকারী",
-	networkFTPPassword = "পাসওয়ার্ড",
-	updatingFileList = "ফাইল তালিকা আপডেট করা হচ্ছে ...",
-	network = "নেটওয়ার্ক",
-	networkTimeout = "রিমোট কম্পিউটার",
-	networkAccessDenied = "রিমোট কম্পিউটারের ফাইল সিস্টেমে অ্যাক্সেস অস্বীকার করা হয়েছে। উপযুক্ত সুযোগসুবিধা পেতে এর মালিকের সাথে যোগাযোগ করুন",
-	networkAllowReadAndWrite = "ফাইল সিস্টেম অ্যাক্সেস",
-	networkModemNotAvailable = "নেটওয়ার্ক ফাংশনগুলি ব্যবহার করতে মডেম সংযুক্ত করুন",
-	networkState = "নেটওয়ার্ক মোড সক্ষম করুন",
-	networkComputers = "নেটওয়ার্ক পিসি বিকল্পসমূহ",
-	networkName = "এই পিসির নাম",
-	networkSearchRadius = "ব্যাসার্ধ",
-	openWith = "দিয়ে খুলুন",
-	select = "অ্যাপ্লিকেশন চয়ন করুন ...",
-	keepInDock = "​​ডক মধ্যে রাখুন",
-	closeAllWindows = "সমস্ত উইন্ডো বন্ধ করুন",
-	closeWindow = "বন্ধ",
-	newWindow = "নতুন উইন্ডো",
-	launch = "লঞ্চ করুন",
-	launchWithArguments = "যুক্তি দিয়ে শুরু করুন",
-	dontShowAnymore = "আবার দেখাবেন না",
-	newName = "নতুন নাম",
-	folderName = "ফোল্ডারের নাম",
-	fileName = "ফাইলের নাম",
-	applicationName = "আবেদনের নাম",
-	file = "ফাইল",
-	notExists = "উপস্থিত নেই",
-	alreadyExists = "ইতিমধ্যে",
-	inDirectory = "এটি প্রতিস্থাপন করবেন?",
-	yes = "হ্যাঁ",
-	no = "নয়",
-	cancel = "বাতিল করুন",
-	open = "খুলুন",
-	applyToAll = "ফোল্ডারে",
-	toDirectory = "ফোল্ডারে",
-	copying = "কপি করা হচ্ছে",
-	faylaBlyad = "ফাইলটি অনুলিপি করা হচ্ছে",
-	areYouSure = "আপনি কি নিশ্চিত?",
-	emptyTrash = "খালি ট্র্যাশ",
-	type = "টাইপ",
-	size = "আকার",
-	date = "তারিখ",
-	name = "নাম",
-	path = "পথ",
-	folder = "ফোল্ডার",
-	unknown = "অজানা",
-	calculatingSize = "গণনা করা হচ্ছে ...",
-	properties = "বৈশিষ্ট্য",
-	newFolderFromChosen = "নির্বাচিত",
-	create = "নতুন",
-	newFolder = "ফোল্ডার",
-	newFile = "ফাইল",
-	newFileFromURL = "ফাইল থেকে ফাইল ইউআরএল",
-	newImage = "চিত্র",
-	newApplication = "খনিজ অ্যাপ্লিকেশন",
-	paste = "আটকান",
-	copy = "কপি",
-	cut = "কাট",
-	edit = "সম্পাদনা",
-	editInPhotoshop = "সম্পাদনা ফটোশপে",
-	rename = "নাম পরিবর্তন",
-	editShortcut = "সম্পাদনা শর্টকাট",
-	createShortcut = "শর্টকাট তৈরি করুন",
-	addToDock = "যুক্ত করুন ডকে",
-	removeFromDock = "ডক থেকে সরান",
-	moveRight = "ডান সরান",
-	moveLeft = "বাম দিকে সরান",
-	archive = "সংরক্ষণাগারে যুক্ত করুন",
-	delete = "মুছুন",
-	addToFavourites = "ফেভারিটে যোগ করুন",
-	removeFromFavourites = "পছন্দের তালিকা থেকে অপসারণ",
-	setAsWallpaper = "ওয়ালপেপার হিসাবে সেট করুন",
-	showPackageContent = "প্যাকেজ সামগ্রী দেখুন",
-	showContainingFolder = "ফোল্ডারযুক্ত প্রদর্শন করুন",
-	flashEEPROM = "EEPROM এ ফ্ল্যাশ করুন",
-	flashingEEPROM = "ফ্ল্যাশিং চলছে। কম্পিউটার বন্ধ করবেন না ...",
-	print3D = "মুদ্রিত মডেল",
-	sortBy = "বাছাই করুন",
-	sortByType = "টাইপ করুন",
-	sortByName = "নাম দিয়ে",
-	sortByDate = "তারিখ অনুসারে",
+	RAMControl = "RAM নিয়ন্ত্রণ",
 	aboutSystem = "সিস্টেম সম্পর্কে",
-	updates = "আপডেট",
-	update = "রিফ্রেশ",
-	shutdown = "শাটডাউন",
-	logout = "লগআউট",
-	reboot = "রিবুট",
-	shortcutIsCorrupted = "শর্টকাটটি অস্তিত্বযুক্ত ফাইলের সাথে যুক্ত হয়েছে",
-	sortAutomatically = "গ্রিডে প্রান্তিককরণ করুন",
-	onDesktop = "ডেস্কটপে",
-	inCurrentDirectory = "বর্তমান ফোল্ডারে",
-	errorWhileRunningProgram = "চলার সময় ত্রুটি ",
-	sendedFeedback = "প্রতিক্রিয়া পাঠানো হয়েছিল",
-	sendFeedback = "প্রতিক্রিয়া পাঠান",
-	yourContacts = "আপনার পরিচিতিগুলি",
+	addToDock = "ডকে যোগ করুন",
+	addToFavourites = "ফেভারিটে যোগ করুন",
 	additionalInfo = "অতিরিক্ত তথ্য",
-	stackTraceback = "স্ট্যাক ট্রেসব্যাক",
+	alreadyExists = "আগে থেকেই আছে",
+	applicationName = "আবেদনের নাম",
+	applyToAll = "সব জন্য আবেদন",
+	archive = "সংরক্ষণাগার যোগ করুন",
+	areYouSure = "তুমি কি নিশ্চিত?",
+	calculatingSize = "গণনা করা হচ্ছে...",
+	cancel = "বাতিল করুন",
+	closeAllWindows = "সব জানালা বন্ধ করুন",
+	closeWindow = "বন্ধ",
+	copy = "কপি",
+	copying = "কপি করা হচ্ছে",
+	create = "নতুন",
+	createShortcut = "শর্টকাট তৈরি করুন",
+	cut = "কাটা",
+	date = "তারিখ",
+	delete = "মুছে ফেলা",
+	dontShowAnymore = "আবার দেখাবেন না",
+	downloading = "ডাউনলোড হচ্ছে",
+	edit = "সম্পাদনা করুন",
+	editInPhotoshop = "ফটোশপে সম্পাদনা করুন",
+	editShortcut = "শর্টকাট সম্পাদনা করুন",
+	emptyTrash = "ট্র্যাশ খালি",
+	errorWhileRunningProgram = "চালানোর সময় ত্রুটি",
 	favourite = "প্রিয়",
-	search = "অনুসন্ধান",
-	mounts = "মাউন্টস",
-	uploadToPastebin = "পাস্তবিনে আপলোড করুন",
-	pasteName = "আটকানো নাম",
-	uploading = "আপলোড চলছে ...",
-	uploadingSuccess = "আপলোড করা হয়েছে ",
-	uploadingFailure = "আপলোড ব্যর্থ হয়েছে: "
+	faylaBlyad = "ফাইল",
+	file = "ফাইল",
+	fileName = "ফাইলের নাম",
+	flashEEPROM = "EEPROM এ ফ্ল্যাশ করুন",
+	flashingEEPROM = "ফ্ল্যাশিং চলছে। ",
+	folder = "ফোল্ডার",
+	folderName = "ফোল্ডারের নাম",
+	inCurrentDirectory = "বর্তমান ফোল্ডারে",
+	inDirectory = "ফোল্ডারে",
+	keepInDock = "ডকে রাখুন",
+	launch = "শুরু করা",
+	launchWithArguments = "যুক্তি দিয়ে লঞ্চ করুন",
+	logout = "প্রস্থান",
+	mounts = "মাউন্ট",
+	moveLeft = "বামে ঘুরো",
+	moveRight = "ডানে যাও",
+
+	name = "নাম",
+	needReplace = "এটা প্রতিস্থাপন করো?",
+	network = "অন্তর্জাল",
+	networkAccessDenied = "দূরবর্তী কম্পিউটারের ফাইল সিস্টেমে অ্যাক্সেস অস্বীকার করা হয়েছে। ",
+	networkAllowReadAndWrite = "ফাইল সিস্টেম অ্যাক্সেস",
+	networkComputers = "নেটওয়ার্ক পিসি বিকল্প",
+	networkFTPAddress = "সার্ভার ঠিকানা",
+	networkFTPConnections = "FTP-সংযোগ",
+	networkFTPNewConnection = "FTP-সংযোগ",
+	networkFTPPassword = "পাসওয়ার্ড",
+
+	networkFTPPort = "সার্ভারের পোর্ট",
+	networkFTPUser = "ব্যবহারকারী",
+	networkModemNotAvailable = "নেটওয়ার্ক ফাংশন ব্যবহার করতে মডেম সংযুক্ত করুন",
+	networkName = "এই পিসির নাম",
+	networkSearchRadius = "ব্যাসার্ধ অনুসন্ধান করা হচ্ছে",
+	networkState = "নেটওয়ার্ক মোড সক্ষম করুন",
+	networkTimeout = "রিমোট কম্পিউটার সাড়া দিচ্ছে না",
+	newApplication = "MineOS অ্যাপ্লিকেশন",
+	newFile = "ফাইল",
+	newFileFromURL = "URL থেকে ফাইল",
+	newFolder = "ফোল্ডার",
+	newFolderFromChosen = "নির্বাচিত থেকে নতুন ফোল্ডার",
+	newImage = "ছবি",
+	newName = "নতুন নাম",
+	newWindow = "নতুন জানালা",
+	no = "না",
+	notExists = "বিদ্যমান না",
+	onDesktop = "ডেস্কটপে",
+	open = "খোলা",
+	openWith = "সঙ্গে খোলা",
+	packageUnloading = "স্বয়ংক্রিয় আনলোডিং",
+	paste = "পেস্ট করুন",
+	pasteName = "নাম পেস্ট করুন",
+	path = "পথ",
+	print3D = "প্রিন্ট মডেল",
+	properties = "বৈশিষ্ট্য",
+	reboot = "রিবুট করুন",
+	removeFromDock = "ডক থেকে সরান",
+	removeFromFavourites = "প্রিয় থেকে সরান",
+	rename = "নাম পরিবর্তন করুন",
+
+	search = "অনুসন্ধান করুন",
+	select = "অ্যাপ্লিকেশন চয়ন করুন...",
+	sendFeedback = "মতামত পাঠানো",
+	sendedFeedback = "প্রতিক্রিয়া পাঠানো হয়েছে",
+
+	setAsWallpaper = "ওয়ালপেপার হিসাবে সেট করুন",
+	shortcutIsCorrupted = "শর্টকাট অস্তিত্বহীন ফাইলের সাথে লিঙ্ক করা হয়েছে",
+	showContainingFolder = "ফোল্ডার ধারণকারী দেখান",
+	showPackageContent = "প্যাকেজ বিষয়বস্তু দেখান",
+	shutdown = "শাটডাউন",
+	size = "আকার",
+
+	sortAutomatically = "গ্রিডে সারিবদ্ধ করুন",
+	sortBy = "সাজান",
+	sortByDate = "তারিখ অনুসারে",
+	sortByName = "নামে",
+
+	sortByType = "টাইপ দ্বারা",
+	stackTraceback = "স্ট্যাক ট্রেসব্যাক",
+	toDirectory = "ফোল্ডারে",
+	type = "টাইপ",
+	unknown = "অজানা",
+	update = "রিফ্রেশ",
+
+	updates = "আপডেট",
+	updatingFileList = "ফাইল তালিকা আপডেট করা হচ্ছে...",
+	uploadToPastebin = "পেস্টবিনে আপলোড করুন",
+
+	uploading = "আপলোড হচ্ছে...",
+	uploadingFailure = "আপলোড ব্যর্থ হয়েছে:",
+	uploadingSuccess = "আপলোড করা হয়েছে",
+	yes = "হ্যাঁ",
+	yourContacts = "আপনার পরিচিতি",
 }
