--- a/Localizations/Bulgarian.lang
+++ b/Localizations/Bulgarian.lang
@@ -1,128 +1,124 @@
--- Bulgarian Language Pack
--- Contributed by Pitaya on 18/06/19
--- Български език за MineOS
-
 {
-	downloading = "Изтегля се…",
-	CPUArchitecture = "Aрхитектура на процесора",
-	RAMControl = "Контрол на RAM",
-	packageUnloading = "Автоматично ",
-	networkFTPNewConnection = "FTP връзка",
-	networkFTPConnections = "FTP връзки",
-	networkFTPAddress = "Адрес на FТР сървъра",
-	networkFTPPort = "Порт",
-	networkFTPUser = "Потребителско име",
-	networkFTPPassword = "Парола",
-	updatingFileList = "Презареждане…",
-	network = "Мрежа",
-	networkTimeout = "Дистанционният компютър не отговаря",
-	networkAccessDenied = "Достъпът до файловете на дистанционния компютър е отказан. Свържете се с притежателя му за да получите правата",
-	networkAllowReadAndWrite = "Достъп до файловете",
-	networkModemNotAvailable = "Закачете модем към компютъра за да използвате мрежовите услуги",
-	networkState = "Еключи мрежов режим",
-	networkComputers = "Настройки за мрежовите компютри",
-	networkName = "Име на този компютър",
-	networkSearchRadius = "Сканиране на региона…",
-	openWith = "Отвори със",
-	select = "Изберете програма…",
-	keepInDock = "Закачи за Лента на програмите",
-	closeAllWindows = "Затвори всички прозорци",
-	closeWindow = "Затвори",
-	newWindow = "Нов прозорец",
-	launch = "Стартирай",
-	launchWithArguments = "Стартирай с аргументи",
-	dontShowAnymore = "Не показвай отново",
-	newName = "Ново име",
-	folderName = "Име на папка",
-	fileName = "Име на файл",
-	applicationName = "Име на програма",
-	file = "Файл",
-	notExists = "не съществува",
+	CPUArchitecture = "Архитектура на процесора",
+	RAMControl = "RAM управление",
+	aboutSystem = "Относно системата",
+	addToDock = "Добавяне към Dock",
+	addToFavourites = "Добави в любими",
+	additionalInfo = "Допълнителна информация",
 	alreadyExists = "вече съществува",
-	inDirectory = "в папка",
-	needReplace = "Замени?",
-	yes = "Да",
-	no = "Не",
-	cancel = "Откажи",
-	open = "Отвори",
-	applyToAll = "Приеми за всички",
-	toDirectory = "за папка",
+	applicationName = "Име на приложението",
+	applyToAll = "Приложи към всички",
+	archive = "Добави към Архив",
+	areYouSure = "Сигурен ли си?",
+	calculatingSize = "изчисляване…",
+	cancel = "Отмяна",
+	closeAllWindows = "Затворете всички прозорци",
+	closeWindow = "Близо",
+	copy = "копие",
 	copying = "Копиране",
-	faylaBlyad = "файл",
-
-	areYouSure = "Сигурни ли сте?",
-	emptyTrash = "Изчисти кошчето",
-	type = "Вид",
-	size = "Големина",
+	create = "Нов",
+	createShortcut = "Създай пряк път",
+	cut = "Разрез",
 	date = "Дата",
-	name = "Име",
-	path = "Локация",
+	delete = "Изтрий",
+	dontShowAnymore = "Не показвай отново",
+	downloading = "Изтеглянето е в ход",
+	edit = "редактиране",
+	editInPhotoshop = "Редактирайте във Photoshop",
+	editShortcut = "Редактиране на пряк път",
+	emptyTrash = "Празен боклук",
+	errorWhileRunningProgram = "Грешка по време на работа",
+	favourite = "Любима",
+	faylaBlyad = "файл",
+	file = "Файл",
+	fileName = "Име на файл",
+	flashEEPROM = "Флаш към EEPROM",
+	flashingEEPROM = "Мигане в ход. ",
 	folder = "Папка",
-	unknown = "Непознат",
-	calculatingSize = "изчислява се…",
+	folderName = "Име на папка",
+	inCurrentDirectory = "В текущата папка",
+	inDirectory = "в папка",
+	keepInDock = "Дръжте на док",
+	launch = "Стартиране",
+	launchWithArguments = "Стартирайте с аргументи",
+	logout = "Излез от профила си",
+	mounts = "Монтира",
+	moveLeft = "Мръдни на ляво",
+	moveRight = "Премести се надясно",
 
-	properties = "Настройки",
-	newFolderFromChosen = "Нова папка от избраните",
-	create = "Нов(а/о)",
-	newFolder = "Пака",
+	name = "име",
+	needReplace = "Замени го?",
+	network = "мрежа",
+	networkAccessDenied = "Достъпът до файловата система на отдалечения компютър е отказан. ",
+	networkAllowReadAndWrite = "Достъп до файловата система",
+	networkComputers = "Опции за мрежови компютри",
+	networkFTPAddress = "Адрес на сървъра",
+	networkFTPConnections = "FTP-връзки",
+	networkFTPNewConnection = "FTP-връзка",
+	networkFTPPassword = "парола",
+
+	networkFTPPort = "Порт на сървъра",
+	networkFTPUser = "потребител",
+	networkModemNotAvailable = "Свържете модем, за да използвате мрежови функции",
+	networkName = "Име на този компютър",
+	networkSearchRadius = "Радиус на търсене",
+	networkState = "Активиране на мрежов режим",
+	networkTimeout = "Отдалеченият компютър не отговаря",
+	newApplication = "Приложението MineOS",
 	newFile = "Файл",
 	newFileFromURL = "Файл от URL",
+	newFolder = "Папка",
+	newFolderFromChosen = "Нова папка от избрана",
 	newImage = "Изображение",
-	newApplication = "Програма за MineOS",
-	paste = "Постави",
-	copy = "Копирай",
-	cut = "Изрежи",
-	edit = "Редактирай",
-	editInPhotoshop = "Редактирай във Photoshop",
-	rename = "Преименувай",
-	editShortcut = "Редактирай пряка връзка",
-	createShortcut = "Създай пряка връзка",
-	addToDock = "Добави в Лента на Програмите",
-	removeFromDock = "Откачи от Лента на Програмите",
-	moveRight = "Премести вдясно",
-	moveLeft = "Премести вляво",
-	archive = "Добави в архива",
-	delete = "Изтрий",
-	addToFavourites = "Добави в любими",
-	removeFromFavourites = "Премахни от любими",
+	newName = "Ново име",
+	newWindow = "Нов прозорец",
+	no = "Не",
+	notExists = "не съществува",
+	onDesktop = "На работния плот",
+	open = "Отвори",
+	openWith = "Отворен с",
+	packageUnloading = "Автоматично разтоварване",
+	paste = "Поставете",
+	pasteName = "Поставете име",
+	path = "пътека",
+	print3D = "Печатен модел",
+	properties = "Имоти",
+	reboot = "Рестартирайте",
+	removeFromDock = "Премахнете от Dock",
+	removeFromFavourites = "Премахване от любимите",
+	rename = "Преименувайте",
+
+	search = "Търсене",
+	select = "Изберете приложение…",
+	sendFeedback = "Изпратете отзиви",
+	sendedFeedback = "Обратната връзка беше изпратена",
+
 	setAsWallpaper = "Задай като тапет",
-	showPackageContent = "Покажи съдържание",
-	showContainingFolder = "Покажи съдържащата папка",
-	flashEEPROM = "Запиши в EEPROM-а",
-	flashingEEPROM = "Записване в прогрес. Не изключвайте компютъра…",
-	print3D = "Принтирай модела",
+	shortcutIsCorrupted = "Пряк път е свързан към несъществуващ файл",
+	showContainingFolder = "Покажи съдържаща папка",
+	showPackageContent = "Показване на съдържанието на пакета",
+	shutdown = "Изключвам",
+	size = "размер",
 
-	sortBy = "Подреди по",
-	sortByType = "вид",
-	sortByName = "име",
-	sortByDate = "дата",
+	sortAutomatically = "Подравнете към мрежата",
+	sortBy = "Вид",
+	sortByDate = "По дата",
+	sortByName = "По име",
 
-	aboutSystem = "Относно системата",
-	updates = "Обновления",
-	update = "Презареди",
-	shutdown = "Изключи",
-	logout = "Излез от профила",
-	reboot = "Рестартирай",
+	sortByType = "По вид",
+	stackTraceback = "Проследяване на стека",
+	toDirectory = "към папка",
+	type = "Тип",
+	unknown = "Неизвестен",
+	update = "Обнови",
 
-	shortcutIsCorrupted = "Пряката връзка сочи към несъшествуващ файл",
-	sortAutomatically = "Подреди в таблица",
-	onDesktop = "На десктопа",
-	inCurrentDirectory = "В настоящата папка",
+	updates = "Актуализации",
+	updatingFileList = "Списъкът с файлове се актуализира...",
+	uploadToPastebin = "Качете в Pastebin",
 
-	errorWhileRunningProgram = "Грешка при изпълнението на програма ",
-	sendedFeedback = "Обратната връзка бе изпратена",
-	sendFeedback = "Изпратете обратна връзка",
+	uploading = "Качването е в ход...",
+	uploadingFailure = "Качването не бе успешно:",
+	uploadingSuccess = "Качен на",
+	yes = "да",
 	yourContacts = "Вашите контакти",
-	additionalInfo = "Допълнителна информация",
-	stackTraceback = "Stack traceback",
-
-	favourite = "Любими",
-	search = "Търси",
-	mounts = "Закачени",
-
-	uploadToPastebin = "Качи в Pastebin",
-	pasteName = "Име на Пейст",
-	uploading = "Качване в процес…",
-	uploadingSuccess = "Качено успешно: ",
-	uploadingFailure = "Качването се провали: ",
 }
