--- a/Localizations/Chinese.lang
+++ b/Localizations/Chinese.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "正在下载",
 	CPUArchitecture = "CPU架构",
 	RAMControl = "内存控制",
-	packageUnloading = "自动卸载",
-	networkFTPNewConnection = "新FTP连接",
-	networkFTPConnections = "FTP连接",
-	networkFTPAddress = "FTP地址",
-	networkFTPPort = "FTP端口",
-	networkFTPUser = "FTP用户名",
-	networkFTPPassword = "FTP密码",
-	updatingFileList = "正在更新文件列表...",
-	network = "网络",
-	networkTimeout = "远程计算机无响应",
-	networkAccessDenied = "访问被拒。联系管理员获取相应的权限",
-	networkAllowReadAndWrite = "可读写文件系统",
-	networkModemNotAvailable = "请安装因特网卡以使用互联网",
-	networkState = "启用互联网",
-	networkComputers = "网络主机设置",
-	networkName = "主机名称",
-	networkSearchRadius = "搜索范围",
-	openWith = "打开方式",
-	select = "选择应用...",
-	keepInDock = "固定在Dock上",
+	aboutSystem = "关于系统",
+	addToDock = "添加到码头",
+	addToFavourites = "加入“最喜欢的",
+	additionalInfo = "附加信息",
+	alreadyExists = "已经存在",
+	applicationName = "应用名称",
+	applyToAll = "全部应用",
+	archive = "添加到档案",
+	areYouSure = "你确定吗？",
+	calculatingSize = "计算…",
+	cancel = "取消",
 	closeAllWindows = "关闭所有窗口",
 	closeWindow = "关闭",
-	newWindow = "新窗口",
-	launch = "启动",
-	launchWithArguments = "带参数启动",
-	dontShowAnymore = "不再显示",
-	newName = "新名称",
-	folderName = "文件夹名称",
-	fileName = "文件名称",
-	applicationName = "应用名称",
-	file = "文件",
-	notExists = "不存在",
-	alreadyExists = "已存在",
-	inDirectory = "在文件夹里",
-	needReplace = "是否要更换？",
-	yes = "确定",
-	no = "不要",
-	cancel = "取消",
-	open = "打开",
-	applyToAll = "应用到所有项目",
-	toDirectory = "到文件夹",
-	copying = "复制中",
-	faylaBlyad = "文件",
-
-	areYouSure = "你确定吗？",
-	emptyTrash = "清空回收站",
-	type = "类型",
-	size = "尺寸",
-	date = "日期",
-	name = "名称",
-	path = "路径",
-	folder = "文件夹",
-	unknown = "未知",
-	calculatingSize = "计算中...",
-
-	properties = "属性",
-	newFolderFromChosen = "在所选文件夹里新建一个文件夹",
-	create = "新",
-	newFolder = "新文件夹",
-	newFile = "新文件",
-	newFileFromURL = "从URL获得文件",
-	newImage = "图像",
-	newApplication = "MineOS应用",
-	paste = "粘贴",
 	copy = "复制",
-	cut = "剪切",
-	edit = "编辑",
-	editInPhotoshop = "使用Photoshop编辑",
-	rename = "重命名",
-	editShortcut = "编辑快捷方式",
+	copying = "复印",
+	create = "新的",
 	createShortcut = "创建快捷方式",
-	addToDock = "添加到Dock",
-	removeFromDock = "从Dock中删除",
-	moveRight = "向右移动",
-	moveLeft = "向左移动",
-	archive = "添加到归档",
+	cut = "切",
+	date = "日期",
 	delete = "删除",
-	addToFavourites = "添加到收藏夹",
-	removeFromFavourites = "从收藏夹中删除",
-	setAsWallpaper = "设为壁纸",
-	showPackageContent = "显示内容",
-	showContainingFolder = "显示其中的文件夹",
-	flashEEPROM = "烧录到EEPROM",
-	flashingEEPROM = "正在烧录到EEPROM。不要关闭电源...",
-	print3D = "打印模型",
-
-	sortBy = "排序方式",
-	sortByType = "文件类型",
-	sortByName = "名称",
-	sortByDate = "日期",
-
-	aboutSystem = "关于系统",
-	updates = "更新",
-	update = "刷新",
-	shutdown = "关机",
-	logout = "注销",
-	reboot = "重启",
-
-	shortcutIsCorrupted = "快捷方式连接到了一个不存在的文件",
-	sortAutomatically = "对齐到网格",
-	onDesktop = "桌面上",
+	dontShowAnymore = "不再显示",
+	downloading = "正在下载",
+	edit = "编辑",
+	editInPhotoshop = "在 Photoshop 中编辑",
+	editShortcut = "编辑快捷方式",
+	emptyTrash = "清空垃圾桶",
+	errorWhileRunningProgram = "运行时出错",
+	favourite = "最喜欢的",
+	faylaBlyad = "文件",
+	file = "文件",
+	fileName = "文件名",
+	flashEEPROM = "闪存到 EEPROM",
+	flashingEEPROM = "正在闪烁。",
+	folder = "文件夹",
+	folderName = "文件夹名称",
 	inCurrentDirectory = "在当前文件夹中",
+	inDirectory = "在文件夹中",
+	keepInDock = "留在码头",
+	launch = "发射",
+	launchWithArguments = "带参数启动",
+	logout = "登出",
+	mounts = "坐骑",
+	moveLeft = "向左移动",
+	moveRight = "向右移",
 
-	errorWhileRunningProgram = "发生错误，无法执行",
-	sendedFeedback = "反馈已发送",
-	sendFeedback = "发送反馈",
-	yourContacts = "联系方式",
-	additionalInfo = "额外信息",
-	stackTraceback = "堆栈跟踪",
+	name = "姓名",
+	needReplace = "代替它？",
+	network = "网络",
+	networkAccessDenied = "拒绝访问远程计算机的文件系统。",
+	networkAllowReadAndWrite = "文件系统访问",
+	networkComputers = "网络 PC 选项",
+	networkFTPAddress = "服务器地址",
+	networkFTPConnections = "FTP 连接",
+	networkFTPNewConnection = "FTP 连接",
+	networkFTPPassword = "密码",
 
-	favourite = "收藏夹",
+	networkFTPPort = "服务器端口",
+	networkFTPUser = "用户",
+	networkModemNotAvailable = "连接调制解调器以使用网络功能",
+	networkName = "这台电脑的名称",
+	networkSearchRadius = "搜索半径",
+	networkState = "启用网络模式",
+	networkTimeout = "远程计算机没有响应",
+	newApplication = "MineOS 应用程序",
+	newFile = "文件",
+	newFileFromURL = "来自 URL 的文件",
+	newFolder = "文件夹",
+	newFolderFromChosen = "选择的新文件夹",
+	newImage = "图片",
+	newName = "新名字",
+	newWindow = "新窗户",
+	no = "不",
+	notExists = "不存在",
+	onDesktop = "在桌面上",
+	open = "打开",
+	openWith = "打开用",
+	packageUnloading = "自动卸货",
+	paste = "粘贴",
+	pasteName = "粘贴名称",
+	path = "小路",
+	print3D = "打印模型",
+	properties = "特性",
+	reboot = "重启",
+	removeFromDock = "从 Dock 中移除",
+	removeFromFavourites = "从收藏夹中删除",
+	rename = "改名",
+
 	search = "搜索",
-	mounts = "挂载",
+	select = "选择应用程序...",
+	sendFeedback = "发送反馈",
+	sendedFeedback = "已发送反馈",
 
-	uploadToPastebin = "上传到Pastebin",
-	pasteName = "Paste名称",
+	setAsWallpaper = "设置为墙纸",
+	shortcutIsCorrupted = "快捷方式链接到不存在的文件",
+	showContainingFolder = "显示包含文件夹",
+	showPackageContent = "显示包裹内容",
+	shutdown = "关闭",
+	size = "尺寸",
+
+	sortAutomatically = "对齐网格",
+	sortBy = "种类",
+	sortByDate = "按日期",
+	sortByName = "按名字",
+
+	sortByType = "按类型",
+	stackTraceback = "堆栈回溯",
+	toDirectory = "到文件夹",
+	type = "类型",
+	unknown = "未知",
+	update = "刷新",
+
+	updates = "更新",
+	updatingFileList = "正在更新文件列表...",
+	uploadToPastebin = "上传到 Pastebin",
+
 	uploading = "正在上传...",
-	uploadingSuccess = "已上传至",
-	uploadingFailure = "无法上传",
+	uploadingFailure = "上传失败：",
+	uploadingSuccess = "上传至",
+	yes = "是的",
+	yourContacts = "您的联系人",
 }
