--- a/Localizations/Dutch.lang
+++ b/Localizations/Dutch.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Bezig met downloaden",
-	CPUArchitecture = "CPU architectuur",
-	RAMControl = "Werkgeheugen beheren",
-	packageUnloading = "Automatisch uitladen",
-	networkFTPNewConnection = "Nieuwe FTP-Verbinding",
-	networkFTPConnections = "FTP-Verbindingen",
-	networkFTPAddress = "Server adres",
-	networkFTPPort = "Server port",
-	networkFTPUser = "Gebruiker",
-	networkFTPPassword = "Wachtwoord",
-	updatingFileList = "Bestandenlijst updaten...",
-	network = "Netwerk",
-	networkTimeout = "Externe server reageert niet",
-	networkAccessDenied = "Toegang van het bestandsbeheer van de externe server is geweigerd. Neem contact op met de eigenaar om de benodigde rechten te verkrijgen.",
-	networkAllowReadAndWrite = "Toegang tot het bestandsbeheer",
-	networkModemNotAvailable = "Verbind het modum om de netwerk functies te gebruiken",
-	networkState = "Schakel netwerk in",
-	networkComputers = "Netwerk PCs opties",
-	networkName = "Naam van deze PC",
-	networkSearchRadius = "Zoekradius",
-	openWith = "Openen met…",
-	select = "Kies applicatie…",
-	keepInDock = "Houd in taakbalk",
-	closeAllWindows = "Slaat alle vensters",
-	closeWindow = "Sluit",
-	newWindow = "Nieuw venster",
-	launch = "Start op",
-	launchWithArguments = "Start op met argumenten",
-	dontShowAnymore = "Laat niet meer zien",
-	newName = "Nieuwe naam",
-	folderName = "Map naam",
-	fileName = "Bestandsnaam",
-	applicationName = "Applicatie naam",
-	file = "Bestand",
-	notExists = "bestaat niet",
+	CPUArchitecture = "CPU-architectuur",
+	RAMControl = "RAM-besturing",
+	aboutSystem = "Over systeem",
+	addToDock = "Toevoegen aan Dock",
+	addToFavourites = "Toevoegen aan favorieten",
+	additionalInfo = "Extra informatie",
 	alreadyExists = "bestaat al",
-	inDirectory = "in map",
-	needReplace = "Vervangen?",
-	yes = "Ja",
-	no = "Nee",
-	cancel = "Annuleer",
-	open = "Open",
-	applyToAll = "Op alles toepassen",
-	toDirectory = "naar map",
-	copying = "kopiëren",
-	faylaBlyad = "Bestand",
-
+	applicationName = "Naam van de toepassing",
+	applyToAll = "Toepassen op iedereen",
+	archive = "Toevoegen aan archief",
 	areYouSure = "Weet je het zeker?",
-	emptyTrash = "Leeg prullenbak",
-	type = "Type",
-	size = "Grootte",
-	date = "Datum",
-	name = "Naam",
-	path = "Pad",
-	folder = "Map",
-	unknown = "Onbekent",
-	calculatingSize = "Berekenen…",
-
-	properties = "Instellingen",
-	newFolderFromChosen = "Nieuwe map van gekozen",
+	calculatingSize = "rekenen…",
+	cancel = "Annuleren",
+	closeAllWindows = "Sluit alle vensters",
+	closeWindow = "Dichtbij",
+	copy = "Kopiëren",
+	copying = "Kopiëren",
 	create = "Nieuw",
-	newFolder = "Map",
+	createShortcut = "Snelkoppeling maken",
+	cut = "Snee",
+	date = "Datum",
+	delete = "Verwijderen",
+	dontShowAnymore = "Niet meer laten zien",
+	downloading = "Bezig met downloaden",
+	edit = "Bewerk",
+	editInPhotoshop = "Bewerken in Photoshop",
+	editShortcut = "Sneltoets bewerken",
+	emptyTrash = "Lege prullenbak",
+	errorWhileRunningProgram = "Fout tijdens het hardlopen",
+	favourite = "Favoriet",
+	faylaBlyad = "het dossier",
+	file = "Bestand",
+	fileName = "Bestandsnaam",
+	flashEEPROM = "Flash naar EEPROM",
+	flashingEEPROM = "Knipperend bezig. ",
+	folder = "Map",
+	folderName = "Naam van de map",
+	inCurrentDirectory = "In huidige map",
+	inDirectory = "in map",
+	keepInDock = "In dok houden",
+	launch = "Launch",
+	launchWithArguments = "Start met argumenten",
+	logout = "Uitloggen",
+	mounts = "Mounts",
+	moveLeft = "Ga naar links",
+	moveRight = "Ga naar rechts",
+
+	name = "Naam",
+	needReplace = "Vervang het?",
+	network = "Netwerk",
+	networkAccessDenied = "Toegang tot het bestandssysteem van de externe computer wordt geweigerd. ",
+	networkAllowReadAndWrite = "Toegang tot het bestandssysteem",
+	networkComputers = "Opties voor netwerk-pc's",
+	networkFTPAddress = "Server adres",
+	networkFTPConnections = "FTP-verbindingen",
+	networkFTPNewConnection = "FTP-verbinding",
+	networkFTPPassword = "Wachtwoord",
+
+	networkFTPPort = "Server poort",
+	networkFTPUser = "Gebruiker",
+	networkModemNotAvailable = "Modem aansluiten om netwerkfuncties te gebruiken",
+	networkName = "Naam van deze pc",
+	networkSearchRadius = "Zoekstraal",
+	networkState = "Netwerkmodus inschakelen",
+	networkTimeout = "Externe computer reageert niet",
+	newApplication = "MineOS-toepassing",
 	newFile = "Bestand",
 	newFileFromURL = "Bestand van URL",
-	newImage = "Foto",
-	newApplication = "MineOS applicatie",
+	newFolder = "Map",
+	newFolderFromChosen = "Nieuwe map uit gekozen",
+	newImage = "Afbeelding",
+	newName = "Nieuwe naam",
+	newWindow = "Nieuw raam",
+	no = "Nee",
+	notExists = "bestaat niet",
+	onDesktop = "Op desktop",
+	open = "Open",
+	openWith = "openen met",
+	packageUnloading = "Automatisch lossen",
 	paste = "Plakken",
-	copy = "Kopiëren",
-	cut = "Knippen",
-	edit = "Bewerk",
-	editInPhotoshop = "Bewerk in Photoshop",
-	rename = "Hernoem",
-	editShortcut = "Bewerk snelkoppeling",
-	createShortcut = "Maak snelkoppeling",
-	addToDock = "Voeg toe aan taakbalk",
-	removeFromDock = "Verwijder uit taakbalk",
-	moveRight = "Ga naar rechts",
-	moveLeft = "Ga naar links",
-	archive = "Voeg toe aan archief",
-	delete = "Verwijder",
-	addToFavourites = "Voeg toe aan favorieten",
+	pasteName = "Naam plakken",
+	path = "Pad",
+	print3D = "Afdrukmodel",
+	properties = "Eigenschappen",
+	reboot = "Opnieuw opstarten",
+	removeFromDock = "Verwijderen uit Dock",
 	removeFromFavourites = "Verwijder uit favorieten",
-	setAsWallpaper = "Stel in als achtergrond",
-	showPackageContent = "Toon pakketinhoud",
-	showContainingFolder = "Toon bevattende map",
-	flashEEPROM = "Flashen naar EEPROM",
-	flashingEEPROM = "Bezig met flashen. Sluit de computer niet af...",
-	print3D = "Print model",
+	rename = "Hernoemen",
 
-	sortBy = "Sorteer",
-	sortByType = "Op type",
-	sortByName = "Op naam",
-	sortByDate = "Op datum",
+	search = "Zoekopdracht",
+	select = "Kies applicatie…",
+	sendFeedback = "Feedback verzenden",
+	sendedFeedback = "Feedback is verzonden",
 
-	aboutSystem = "Over systeem",
-	updates = "Updates",
-	update = "Vernieuwen",
-	shutdown = "Sluit af",
-	logout = "Log uit",
-	reboot = "Herstart",
+	setAsWallpaper = "Als bureaubladachtergrond instellen",
+	shortcutIsCorrupted = "Snelkoppeling is gekoppeld aan een niet-bestaand bestand",
+	showContainingFolder = "Bevattende map tonen",
+	showPackageContent = "Inhoud pakket weergeven",
+	shutdown = "Stilgelegd",
+	size = "Maat",
 
-	shortcutIsCorrupted = "Snelkoppeling bestaat niet meer",
 	sortAutomatically = "Uitlijnen op raster",
-	onDesktop = "Op bureaublad",
-	inCurrentDirectory = "In huidige map",
+	sortBy = "Soort",
+	sortByDate = "Op datum",
+	sortByName = "Bij naam",
 
-	errorWhileRunningProgram = "Fout tijdens ",
-	sendedFeedback = "Feedback is verstuurd",
-	sendFeedback = "Verstuurd feedback",
-	yourContacts = "Jou contacten",
-	additionalInfo = "Extra informatie",
-	stackTraceback = "Stack herleiden",
+	sortByType = "op soort",
+	stackTraceback = "Stack traceback",
+	toDirectory = "naar map",
+	type = "Type",
+	unknown = "Onbekend",
+	update = "Vernieuwen",
 
-	favourite = "Favoriete",
-	search = "Zoeken",
-	mounts = "Gekoppelde apparaten",
-
+	updates = "Updates",
+	updatingFileList = "Bestandslijst bijwerken...",
 	uploadToPastebin = "Uploaden naar Pastebin",
-	pasteName = "Plak naam",
+
 	uploading = "Bezig met uploaden...",
-	uploadingSuccess = "Geüpload naar ",
-	uploadingFailure = "Uploaden mislukt: ",
+	uploadingFailure = "Uploaden mislukt:",
+	uploadingSuccess = "Geüpload naar",
+	yes = "Ja",
+	yourContacts = "Jouw contacten",
 }
