--- a/Localizations/French.lang
+++ b/Localizations/French.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Téléchargement en cours",
 	CPUArchitecture = "Architecture du processeur",
 	RAMControl = "Contrôle de la RAM",
-	packageUnloading = "Déchargement automatique",
-	networkFTPNewConnection = "Connexion FTP",
-	networkFTPConnections = "Connexions FTP",
-	networkFTPAddress = "Adresse du serveur",
-	networkFTPPort = "Port du serveur",
-	networkFTPUser = "Utilisateur",
-	networkFTPPassword = "Mot de passe",
-	updatingFileList = "Mise à jour de la liste des fichiers ...",
+	aboutSystem = "À propos du système",
+	addToDock = "Ajouter au quai",
+	addToFavourites = "Ajouter aux Favoris",
+	additionalInfo = "Informations Complémentaires",
+	alreadyExists = "existe déjà",
+	applicationName = "Nom de l'application",
+	applyToAll = "S'applique à tous",
+	archive = "Ajouter aux archives",
+	areYouSure = "Es-tu sûr?",
+	calculatingSize = "calculateur…",
+	cancel = "Annuler",
+	closeAllWindows = "Fermez toutes les fenêtres",
+	closeWindow = "proche",
+	copy = "Copie",
+	copying = "Copier",
+	create = "Nouveau",
+	createShortcut = "Créer un raccourci",
+	cut = "Couper",
+	date = "Date",
+	delete = "Supprimer",
+	dontShowAnymore = "Ne plus afficher",
+	downloading = "Téléchargement en cours",
+	edit = "Modifier",
+	editInPhotoshop = "Modifier dans Photoshop",
+	editShortcut = "Modifier le raccourci",
+	emptyTrash = "Poubelle vide",
+	errorWhileRunningProgram = "Erreur lors de l'exécution",
+	favourite = "Préféré",
+	faylaBlyad = "dossier",
+	file = "Dossier",
+	fileName = "Nom de fichier",
+	flashEEPROM = "Flash vers EEPROM",
+	flashingEEPROM = "Clignotement en cours. ",
+	folder = "Dossier",
+	folderName = "Nom de dossier",
+	inCurrentDirectory = "Dans le dossier courant",
+	inDirectory = "dans le dossier",
+	keepInDock = "Garder à quai",
+	launch = "Lancer",
+	launchWithArguments = "Lancer avec des arguments",
+	logout = "Se déconnecter",
+	mounts = "Montures",
+	moveLeft = "Se déplacer à gauche",
+	moveRight = "Déplacer vers la droite",
+
+	name = "Nom",
+	needReplace = "Remplacer?",
 	network = "Réseau",
-	networkTimeout = "L'ordinateur distant ne répond pas",
-	networkAccessDenied = "L'accès au système de fichiers de l'ordinateur distant est refusé. Contactez son propriétaire pour obtenir les privilèges appropriés",
+	networkAccessDenied = "L'accès au système de fichiers de l'ordinateur distant est refusé. ",
 	networkAllowReadAndWrite = "Accès au système de fichiers",
-	networkModemNotAvailable = "Joindre un modem pour utiliser les fonctions réseau",
-	networkState = "Activer le mode réseau",
-	networkComputers = "Options du réseau de PC",
+	networkComputers = "Options PC réseau",
+	networkFTPAddress = "Adresse du serveur",
+	networkFTPConnections = "Connexions FTP",
+	networkFTPNewConnection = "Connexion FTP",
+	networkFTPPassword = "Mot de passe",
+
+	networkFTPPort = "Port de serveur",
+	networkFTPUser = "Utilisateur",
+	networkModemNotAvailable = "Connectez un modem pour utiliser les fonctions réseau",
 	networkName = "Nom de ce PC",
 	networkSearchRadius = "Rayon de recherche",
-	openWith = "Ouvrir avec",
-	select = "Choisissez l'application ...",
-	keepInDock = "Gardez dans la barre des tâches",
-	closeAllWindows = "Fermez toutes les fenêtres",
-	closeWindow = "Fermer",
-	newWindow = "Nouvelle fenetre",
-	launch = "Lancement",
-	launchWithArguments = "Lancement avec des arguments",
-	dontShowAnymore = "Ne plus afficher",
-	newName = "Renommé",
-	folderName = "Nom du dossier",
-	fileName = "Nom du fichier",
-	applicationName = "Nom de l'application",
-	file = "Fichier",
-	notExists = "n'existe pas",
-	alreadyExists = "existe déjà",
-	inDirectory = "dans le répertoire",
-	needReplace = "Remplacer ?",
-	yes = "Oui",
-	no = "Non",
-	cancel = "Annuler",
-	open = "Ouvrir",
-	applyToAll = "Appliquer à tous",
-	toDirectory = "au répertoire",
-	copying = "Copie",
-	faylaBlyad = "fichier",
-
-	areYouSure = "Êtes-vous sûr ?",
-	emptyTrash = "Corbeille vide",
-	type = "Type",
-	size = "Taille",
-	date = "Date",
-	name = "Prénom",
-	path = "Chemin d'accès",
-	folder = "Dossier",
-	unknown = "Inconnu",
-	calculatingSize = "calcule en cours ...",
-
-	properties = "Propriétés",
-	newFolderFromChosen = "Nouveau dossier choisi",
-	create = "Nouveau",
-	newFolder = "Dossier",
-	newFile = "Fichier",
-	newFileFromURL = "Fichier à partir d'une URL",
-	newImage = "Image",
+	networkState = "Activer le mode réseau",
+	networkTimeout = "L'ordinateur distant ne répond pas",
 	newApplication = "Application MineOS",
-	paste = "Coller",
-	copy = "Copier",
-	cut = "Couper",
-	edit = "Éditer",
-	editInPhotoshop = "Modifier dans Photoshop",
-	rename = "Renommer",
-	editShortcut = "Modifier le raccourci",
-	createShortcut = "Créer un raccourci",
-	addToDock = "Ajouter à la barre des tâches",
-	removeFromDock = "Retirer de la barre des tâches",
-	moveRight = "Déplacer vers la droite",
-	moveLeft = "Déplacer vers la gauche",
-	archive = "Archiver",
-	delete = "Supprimer",
-	addToFavourites = "Ajouter aux Favoris",
-	removeFromFavourites = "Retirer des Favoris",
-	setAsWallpaper = "Définir en tant que fond d'écran",
-	showPackageContent = "Afficher le contenu du package",
-	showContainingFolder = "Afficher le dossier contenant",
-	flashEEPROM = "Flasher vers l'EEPROM",
-	flashingEEPROM = "Flash en cours. Ne pas éteindre l'ordinateur...",
-	print3D = "Imprimer le modèle",
-
-	sortBy = "Trier",
-	sortByType = "Par type",
-	sortByName = "Par nom",
-	sortByDate = "Par date",
-
-	aboutSystem = "À propos du système",
-	updates = "Mises à jour",
-	update = "Rafraîchir",
-	shutdown = "Éteindre",
-	logout = "Se déconnecter",
-	reboot = "Redémarrer",
-
-	shortcutIsCorrupted = "Le raccourci est lié à un fichier inexistant",
-	sortAutomatically = "Aligner sur la grille",
+	newFile = "Dossier",
+	newFileFromURL = "Fichier à partir de l'URL",
+	newFolder = "Dossier",
+	newFolderFromChosen = "Nouveau dossier à partir de choisi",
+	newImage = "Image",
+	newName = "Nouveau nom",
+	newWindow = "Nouvelle fenetre",
+	no = "Non",
+	notExists = "n'existe pas",
 	onDesktop = "Sur le bureau",
-	inCurrentDirectory = "Dans le répertoire actuel",
+	open = "Ouvrir",
+	openWith = "Ouvrir avec",
+	packageUnloading = "Déchargement automatique",
+	paste = "Pâte",
+	pasteName = "Coller le nom",
+	path = "Chemin",
+	print3D = "Modèle d'impression",
+	properties = "Propriétés",
+	reboot = "Redémarrer",
+	removeFromDock = "Supprimer du Dock",
+	removeFromFavourites = "Supprimer des favoris",
+	rename = "Renommer",
 
-	errorWhileRunningProgram = "Erreur lors de l'exécution ",
-	sendedFeedback = "Votre commantaire a bien été envoyé",
-	sendFeedback = "Envoyer un commantaire",
-	yourContacts = "Vos contacts",
-	additionalInfo = "Informations additionnelles",
-	stackTraceback = "Trace d'appels",
+	search = "Recherche",
+	select = "Choisissez une application…",
+	sendFeedback = "Envoyer des commentaires",
+	sendedFeedback = "Les commentaires ont été envoyés",
 
-	favourite = "Favori",
-	search = "Rechercher",
-	mounts = "Monter",
+	setAsWallpaper = "Définir en tant que fond d'écran",
+	shortcutIsCorrupted = "Le raccourci est lié à un fichier inexistant",
+	showContainingFolder = "Afficher le dossier contenant",
+	showPackageContent = "Afficher le contenu du paquet",
+	shutdown = "Fermer",
+	size = "Taille",
 
-	uploadToPastebin = "Envoyer à Pastebin",
-	pasteName = "Coller un nom",
+	sortAutomatically = "Aligner sur la grille",
+	sortBy = "Sorte",
+	sortByDate = "Par date",
+	sortByName = "De nom",
+
+	sortByType = "Par type",
+	stackTraceback = "Traceback de la pile",
+	toDirectory = "au dossier",
+	type = "Taper",
+	unknown = "Inconnue",
+	update = "Rafraîchir",
+
+	updates = "Mises à jour",
+	updatingFileList = "Mise à jour de la liste des fichiers...",
+	uploadToPastebin = "Télécharger sur Pastebin",
+
 	uploading = "Téléchargement en cours...",
-	uploadingSuccess = "Téléchargé à ",
-	uploadingFailure = "Échec du téléchargement: ",
+	uploadingFailure = "Échec de l'importation :",
+	uploadingSuccess = "Téléchargé sur",
+	yes = "Oui",
+	yourContacts = "Vos contacts",
 }
