--- a/Localizations/German.lang
+++ b/Localizations/German.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Download läuft",
-	CPUArchitecture = "Prozessorarchitektur",
-	RAMControl = "Arbeitsspeicherverwaltung",
-	packageUnloading = "Pakete entpacken",
-	networkFTPNewConnection = "FTP-Verbindung",
-	networkFTPConnections = "FTP-Verbindungen",
-	networkFTPAddress = "Server-Adresse",
-	networkFTPPort = "Server-Port",
-	networkFTPUser = "Benutzer",
-	networkFTPPassword = "Passwort",
-	updatingFileList = "Dateiliste wird aktualisiert",
-	network = "Netzwerk",
-	networkTimeout = "Der Remotecomputer reagiert nicht",
-	networkAccessDenied = "Der Zugriff auf das Dateisystem des Remotecomputers wurde verweigert. Wenden Sie sich an den Eigentümer, um entsprechende Berechtigungen zu erhalten",
-	networkAllowReadAndWrite = "Zugriff auf das Dateisystem",
-	networkModemNotAvailable = "Modem anschließen, um Netzwerkfunktionen zu verwenden",
-	networkState = "Netzwerk aktivieren/deaktivieren",
-	networkComputers = "Optionen für Netzwerk-PCs",
-	networkName = "Name des Computers",
-	networkSearchRadius = "Suchradius des Netzwerks",
-	openWith = "Öffnen mit",
-	select = "Anwendung auswähle",
-	keepInDock = "Im Dock behalten",
-	closeAllWindows = "Alle Fenster schließen",
-	closeWindow = "Schließen",
-	newWindow = "Neues Fenster",
-	launch = "Starten",
-	launchWithArguments = "Starten mit Befehlszeile-Argumenten",
-	dontShowAnymore = "Nicht wieder anzeigen",
-	newName = "Neuer Name",
-	folderName = "Ordnername",
-	fileName = "Dateiname",
-	applicationName = "Anwendungsname",
-	file = "Datei",
-	notExists = "Diese Datei existiert nicht",
-	alreadyExists = "Diese Datei ist bereits vorhanden",
-	inDirectory = "im Verzeichnis",
-	needReplace = "Ersetzen?",
-	yes = "Ja",
-	no = "Nein",
-	cancel = "Abbrechen",
-	open = "Öffnen",
-	applyToAll = "Auf alle anwenden",
-	toDirectory = "Zum Verzeichnis",
-	copying = "Kopieren",
-	faylaBlyad = "Datei",
-
-	areYouSure = "Sind Sie sicher?",
-	emptyTrash = "Papierkorb leeren",
-	type = "Art",
-	size = "Größe",
-	date = "Datum",
-	name = "Name",
-	path = "Pfad",
-	folder = "Ordner",
-	unknown = "Unbekannt",
-	calculatingSize = "Berechne Größe...",
-
-	properties = "Eigenschaften",
-	newFolderFromChosen = "Neuen Ordner wählen.",
-	create = "Neu",
-	newFolder = "Ordner",
-	newFile = "Datei",
-	newFileFromURL = "Datei von Netzwerkpfad",
-	newImage = "Bild",
-	newApplication = "MineOS Anwendung",
-	paste = "Einfügen",
-	copy = "Kopieren",
-	cut = "Ausschneiden",
-	edit = "Bearbeiten",
-	editInPhotoshop = "Bearbeiten in Photoshop",
-	rename = "Umbenennen",
-	editShortcut = "Verknüpfung bearbeiten",
-	createShortcut = "Verknüpfung erstellen",
+	CPUArchitecture = "CPU-Architektur",
+	RAMControl = "RAM-Steuerung",
+	aboutSystem = "Über System",
 	addToDock = "Zum Dock hinzufügen",
-	removeFromDock = "Aus Dock entfernen",
-	moveRight = "Nach rechts bewegen",
-	moveLeft = "Nach links bewegen",
-	archive = "Zum Archiv hinzufügen",
-	delete = "Löschen",
 	addToFavourites = "Zu Favoriten hinzufügen",
-	removeFromFavourites = "Aus Favoriten entfernen",
-	setAsWallpaper = "Als Hintergrund",
-	showPackageContent = "Paketinhalt anzeigen",
-	showContainingFolder = "Enthaltenden Ordner anzeigen",
-	flashEEPROM = "Flash zum EEPROM",
-	flashingEEPROM = "Flashvorgang. Computer nicht ausschalten...",
+	additionalInfo = "Weitere Informationen",
+	alreadyExists = "ist bereits vorhanden",
+	applicationName = "Anwendungsname",
+	applyToAll = "Bewerben Sie sich für alle",
+	archive = "Zum Archiv hinzufügen",
+	areYouSure = "Bist du sicher?",
+	calculatingSize = "berechnen…",
+	cancel = "Absagen",
+	closeAllWindows = "Schließen Sie alle Fenster",
+	closeWindow = "Schließen",
+	copy = "Kopieren",
+	copying = "Kopieren",
+	create = "Neu",
+	createShortcut = "Verknüpfung erstellen",
+	cut = "Schnitt",
+	date = "Datum",
+	delete = "Löschen",
+	dontShowAnymore = "Nicht mehr anzeigen",
+	downloading = "Download läuft",
+	edit = "Bearbeiten",
+	editInPhotoshop = "In Photoshop bearbeiten",
+	editShortcut = "Verknüpfung bearbeiten",
+	emptyTrash = "Leerer Müll",
+	errorWhileRunningProgram = "Fehler beim Laufen",
+	favourite = "Favorit",
+	faylaBlyad = "Datei",
+	file = "Datei",
+	fileName = "Dateinamen",
+	flashEEPROM = "Auf EEPROM flashen",
+	flashingEEPROM = "Flashen läuft. ",
+	folder = "Ordner",
+	folderName = "Ordnernamen",
+	inCurrentDirectory = "Im aktuellen Ordner",
+	inDirectory = "im Ordner",
+	keepInDock = "Bleiben Sie im Dock",
+	launch = "Starten",
+	launchWithArguments = "Starten Sie mit Argumenten",
+	logout = "Ausloggen",
+	mounts = "Anschlüsse",
+	moveLeft = "Geh nach links",
+	moveRight = "Nach rechts bewegen",
+
+	name = "Name",
+	needReplace = "Ersetze es?",
+	network = "Netzwerk",
+	networkAccessDenied = "Der Zugriff auf das Dateisystem des Remote-Computers wird verweigert. ",
+	networkAllowReadAndWrite = "Zugriff auf das Dateisystem",
+	networkComputers = "Optionen für Netzwerk-PCs",
+	networkFTPAddress = "Serveradresse",
+	networkFTPConnections = "FTP-Verbindungen",
+	networkFTPNewConnection = "FTP-Verbindung",
+	networkFTPPassword = "Passwort",
+
+	networkFTPPort = "Server Port",
+	networkFTPUser = "Benutzer",
+	networkModemNotAvailable = "Schließen Sie ein Modem an, um Netzwerkfunktionen zu verwenden",
+	networkName = "Name dieses PCs",
+	networkSearchRadius = "Suchradius",
+	networkState = "Netzwerkmodus aktivieren",
+	networkTimeout = "Remote-Computer reagiert nicht",
+	newApplication = "MineOS-Anwendung",
+	newFile = "Datei",
+	newFileFromURL = "Datei von URL",
+	newFolder = "Ordner",
+	newFolderFromChosen = "Neuer Ordner von gewählt",
+	newImage = "Bild",
+	newName = "Neuer Name",
+	newWindow = "Neues Fenster",
+	no = "Nein",
+	notExists = "existiert nicht",
+	onDesktop = "Auf dem Schreibtisch",
+	open = "Offen",
+	openWith = "Öffnen mit",
+	packageUnloading = "Automatisches Entladen",
+	paste = "Paste",
+	pasteName = "Namen einfügen",
+	path = "Weg",
 	print3D = "Modell drucken",
+	properties = "Eigenschaften",
+	reboot = "Neustart",
+	removeFromDock = "Aus dem Dock entfernen",
+	removeFromFavourites = "Von den Favoriten entfernen",
+	rename = "Umbenennen",
 
-	sortBy = "Sortieren",
-	sortByType = "Nach Typ",
-	sortByName = "Nach Namen",
-	sortByDate = "Nach Datum",
+	search = "Suche",
+	select = "Anwendung auswählen…",
+	sendFeedback = "Feedback schicken",
+	sendedFeedback = "Feedback wurde gesendet",
 
-	aboutSystem = "Über das System",
-	updates = "Sicherheitsaktualisierungen",
-	update = "Aktualisieren",
-	shutdown = "Herunterfahren",
-	logout = "Abmelden",
-	reboot = "Neustarten",
+	setAsWallpaper = "Als Hintergrundbild festlegen",
+	shortcutIsCorrupted = "Die Verknüpfung ist mit einer nicht vorhandenen Datei verknüpft",
+	showContainingFolder = "Umfassenden Ordner anzeigen",
+	showPackageContent = "Paketinhalt anzeigen",
+	shutdown = "Abschalten",
+	size = "Größe",
 
-	shortcutIsCorrupted = "Verknüpfung ist fehlerhaft oder nicht mehr vorhanden.",
 	sortAutomatically = "Am Raster ausrichten",
-	onDesktop = "Auf dem Desktop",
-	inCurrentDirectory = "Im aktuellen Verzeichnis",
+	sortBy = "Sortieren",
+	sortByDate = "Nach Datum",
+	sortByName = "Namentlich",
 
-	errorWhileRunningProgram = "Fehler beim Ausführen",
-	sendedFeedback = "Fehlerbericht wurde gesendet",
-	sendFeedback = "Fehlerbericht senden",
-	yourContacts = "Meine Kontakte",
-	additionalInfo = "Zusätzliche Informationen",
-	stackTraceback = "Stacktrace",
+	sortByType = "Nach Typ",
+	stackTraceback = "Stack-Traceback",
+	toDirectory = "zum Ordner",
+	type = "Typ",
+	unknown = "Unbekannt",
+	update = "Aktualisierung",
 
-	favourite = "Favoriten",
-	search = "Suchen",
-	mounts = "Einhängen",
-
+	updates = "Aktualisierung",
+	updatingFileList = "Dateiliste wird aktualisiert...",
 	uploadToPastebin = "Auf Pastebin hochladen",
-	pasteName = "Name einfügen",
+
 	uploading = "Hochladen läuft...",
-	uploadingSuccess = "Hochgeladen",
-	uploadingFailure = "Hochladen fehlgeschlagen!",
+	uploadingFailure = "Hochladen fehlgeschlagen:",
+	uploadingSuccess = "Hochgeladen auf",
+	yes = "Ja",
+	yourContacts = "Deine Kontakte",
 }
