--- a/Localizations/Hindi.lang
+++ b/Localizations/Hindi.lang
@@ -1,116 +1,124 @@
 {
-	downloading = "प्रगति में डाउनलोड करना",
 	CPUArchitecture = "सीपीयू वास्तुकला",
 	RAMControl = "रैम नियंत्रण",
-	packageUnloading = "स्वचालित उतारना",
-	networkFTPNewConnection = "एफ़टीपी-कनेक्शन",
-	networkFTPConnections = "एफ़टीपी-कनेक्शन",
+	aboutSystem = "सिस्टम के बारे में",
+	addToDock = "डॉक में जोड़ें",
+	addToFavourites = "पसंदीदा में जोड़ें",
+	additionalInfo = "अतिरिक्त जानकारी",
+	alreadyExists = "पहले से ही मौजूद है",
+	applicationName = "आवेदन का नाम",
+	applyToAll = "सब पर लागू",
+	archive = "संग्रह में जोड़",
+	areYouSure = "क्या आपको यकीन है?",
+	calculatingSize = "गणना कर रहा है ...",
+	cancel = "रद्द करना",
+	closeAllWindows = "सभी विंडो बंद करें",
+	closeWindow = "बंद करे",
+	copy = "प्रतिलिपि",
+	copying = "प्रतिलिपि बनाई जा रही",
+	create = "नया",
+	createShortcut = "शॉर्टकट बनाएं",
+	cut = "कट गया",
+	date = "दिनांक",
+	delete = "मिटाना",
+	dontShowAnymore = "फिर से मत दिखाओ",
+	downloading = "डाउनलोड हो रहा है",
+	edit = "संपादन करना",
+	editInPhotoshop = "फोटोशॉप में संपादित करें",
+	editShortcut = "शॉर्टकट संपादित करें",
+	emptyTrash = "कचरा खाली करें",
+	errorWhileRunningProgram = "दौड़ते समय त्रुटि",
+	favourite = "पसंदीदा",
+	faylaBlyad = "फ़ाइल",
+	file = "फ़ाइल",
+	fileName = "फ़ाइल का नाम",
+	flashEEPROM = "फ्लैश टू ईईपीरोम",
+	flashingEEPROM = "चमक रहा है। ",
+	folder = "फ़ोल्डर",
+	folderName = "फोल्डर का नाम",
+	inCurrentDirectory = "वर्तमान फ़ोल्डर में",
+	inDirectory = "फ़ोल्डर में",
+	keepInDock = "गोदी में रखें",
+	launch = "शुरू करना",
+	launchWithArguments = "तर्कों के साथ लॉन्च करें",
+	logout = "लॉग आउट",
+	mounts = "माउंट",
+	moveLeft = "बाएं खिसको",
+	moveRight = "सही कदम",
+
+	name = "नाम",
+	needReplace = "इसे बदलो?",
+	network = "नेटवर्क",
+	networkAccessDenied = "दूरस्थ कंप्यूटर के फाइल सिस्टम तक पहुंच से इनकार किया गया है। ",
+	networkAllowReadAndWrite = "फाइल सिस्टम एक्सेस",
+	networkComputers = "नेटवर्क पीसी विकल्प",
 	networkFTPAddress = "सर्वर पता",
+	networkFTPConnections = "एफ़टीपी-कनेक्शन",
+	networkFTPNewConnection = "एफ़टीपी-कनेक्शन",
+	networkFTPPassword = "पासवर्ड",
+
 	networkFTPPort = "सर्वर पोर्ट",
 	networkFTPUser = "उपयोगकर्ता",
-	networkFTPPassword = "पासवर्ड",
-	updatingFileList = "अद्यतन फ़ाइल सूची ...",
-	network = "नेटवर्क",
-	networkTimeout = "दूरस्थ कंप्यूटर",
-	networkAccessDenied = "दूरस्थ कंप्यूटर के फाइल सिस्टम तक पहुंच से वंचित है। उचित विशेषाधिकार प्राप्त करने के लिए संपर्क करें",
-	networkAllowReadAndWrite = "फाइल सिस्टम एक्सेस",
-	networkModemNotAvailable = "नेटवर्क कार्यों का उपयोग करने के लिए मॉडेम संलग्न करें",
-	networkState = "नेटवर्क मोड सक्षम करें",
-	networkComputers = "नेटवर्क पीसी विकल्प",
+	networkModemNotAvailable = "नेटवर्क फ़ंक्शंस का उपयोग करने के लिए मॉडेम संलग्न करें",
 	networkName = "इस पीसी का नाम",
-	networkSearchRadius = "खोज त्रिज्या",
-	openWith = "के साथ खोलें",
-	select = "एप्लिकेशन चुनें ...",
-	keepInDock = "गोदी में रखें",
-	closeAllWindows = "सभी विंडो बंद करें",
-	closeWindow = "बंद करें",
-	newWindow = "नई विंडो",
-	launch = "लॉन्च करें",
-	launchWithArguments = "तर्कों के साथ लॉन्च करें",
-	dontShowAnymore = "फिर से न दिखाएं",
-	newName = "नया नाम",
-	folderName = "फ़ोल्डर का नाम",
-	fileName = "फ़ाइल का नाम",
-	applicationName = "आवेदन का नाम",
-	file = "फ़ाइल",
-	notExists = "मौजूद नहीं है",
-	alreadyExists = "पहले से ही मौजूद है",
-	inDirectory = "फ़ोल्डर में",
-	needReplace = "इसे बदलें?",
-	yes = "हाँ",
-	no = "नहीं",
-	cancel = "रद्द करें",
-	open = "ओपन",
-	applyToAll = "सभी",
-	toDirectory = "पर लागू करें फ़ोल्डर में",
-	copying = "प्रतिलिपि बनाई जा रही",
-	faylaBlyad = "फाइल कॉपी करना",
-	areYouSure = "क्या आप सुनिश्चित हैं?",
-	emptyTrash = "खाली कचरा",
-	type = "टाइप करें",
-	size = "आकार",
-	date = "दिनांक",
-	name = "नाम",
-	path = "पथ",
-	folder = "फोल्डर",
-	unknown = "अज्ञात",
-	calculatingSize = "गणना…",
-	properties = "गुण",
-	newFolderFromChosen = "से नया फ़ोल्डर",
-	create = "नया",
-	newFolder = "फ़ोल्डर",
+	networkSearchRadius = "त्रिज्या खोज रहे हैं",
+	networkState = "नेटवर्क मोड सक्षम करें",
+	networkTimeout = "दूरस्थ कंप्यूटर प्रतिसाद नहीं दे रहा है",
+	newApplication = "माइनओएस एप्लीकेशन",
 	newFile = "फ़ाइल",
-	newFileFromURL = "फ़ाइल URL",
+	newFileFromURL = "यूआरएल से फाइल",
+	newFolder = "फ़ोल्डर",
+	newFolderFromChosen = "चुने गए से नया फ़ोल्डर",
 	newImage = "छवि",
-	newApplication = "मेरा आवेदन",
-	paste = "चिपकाएँ",
-	copy = "कॉपी",
-	cut = "कट",
-	edit = "संपादित करें",
-	editInPhotoshop = "संपादित करें फ़ोटोशॉप में",
-	rename = "नाम बदलें",
-	editShortcut = "शॉर्टकट संपादित करें",
-	createShortcut = "शॉर्टकट बनाएं",
-	addToDock = "जोड़ें डॉक",
-	removeFromDock = "डॉक से हटाएं",
-	moveRight = "दाएं",
-	moveLeft = "बाएं से जाएं",
-	archive = "संग्रह में जोड़ें",
-	delete = "हटाएं",
-	addToFavourites = "पसंदीदा में जोड़ें",
-	removeFromFavourites = "निकालें fr om पसंदीदा",
-	setAsWallpaper = "वॉलपेपर के रूप में सेट करें",
-	showPackageContent = "पैकेज की सामग्री दिखाएं",
-	showContainingFolder = "फ़ोल्डर युक्त दिखाएं",
-	flashEEPROM = "फ्लैश से EEPROM",
-	flashingEEPROM = "प्रगति में चमकती। कंप्यूटर बंद न करें ...",
-	print3D = "प्रिंट मॉडल",
-	sortBy = "सॉर्ट",
-	sortByType = "टाइप करके",
-	sortByName = "नाम से",
-	sortByDate = "आज तक",
-	aboutSystem = "सिस्टम के बारे में",
-	updates = "अपडेट",
-	update = "ताज़ा करें",
-	shutdown = "शटडाउन",
-	logout = "लॉगआउट",
-	reboot = "रिबूट",
-	shortcutIsCorrupted = "शॉर्टकट न के बराबर फाइल से जुड़ा है",
-	sortAutomatically = "ग्रिड पर",
+	newName = "नया नाम",
+	newWindow = "नयी खिड़की",
+	no = "नहीं",
+	notExists = "अस्तित्व में नहीं है",
 	onDesktop = "डेस्कटॉप पर",
-	inCurrentDirectory = "चालू फ़ोल्डर में",
-	errorWhileRunningProgram = "दौड़ते समय त्रुटि ",
-	sendedFeedback = "प्रतिक्रिया भेजी गई",
-	sendFeedback = "फीडबैक",
-	yourContacts = "अपने संपर्क",
-	additionalInfo = "अतिरिक्त जानकारी",
-	stackTraceback = "ढेर ट्रेसबैक",
-	favourite = "पसंदीदा",
+	open = "खुला",
+	openWith = "के साथ खोलें",
+	packageUnloading = "स्वचालित उतराई",
+	paste = "पेस्ट करें",
+	pasteName = "पेस्ट नाम",
+	path = "पथ",
+	print3D = "प्रिंट मॉडल",
+	properties = "गुण",
+	reboot = "रीबूट",
+	removeFromDock = "डॉक से हटाएं",
+	removeFromFavourites = "पसंदीदा से निकालें",
+	rename = "नाम बदलें",
+
 	search = "खोज",
-	mounts = "Mounts",
-	uploadToPastebin = "Pastebin पर अपलोड करें",
-	pasteName = "चिपकाएँ नाम",
-	uploading = "अपलोड हो रहा है ...",
-	uploadingSuccess = "अपलोड किया गया ",
-	uploadingFailure = "अपलोड करना विफल: "
+	select = "एप्लिकेशन चुनें…",
+	sendFeedback = "प्रतिक्रिया भेजें",
+	sendedFeedback = "प्रतिक्रिया भेजी गई",
+
+	setAsWallpaper = "वॉलपेपर के रूप में सेट",
+	shortcutIsCorrupted = "शॉर्टकट गैर-मौजूद फ़ाइल से जुड़ा हुआ है",
+	showContainingFolder = "धारण करने वाले फोल्डर को दिखाएं",
+	showPackageContent = "पैकेज सामग्री दिखाएं",
+	shutdown = "बंद करना",
+	size = "आकार",
+
+	sortAutomatically = "ग्रिड के लिए संरेखित करें",
+	sortBy = "क्रम से लगाना",
+	sortByDate = "तिथि के अनुसार",
+	sortByName = "नाम से",
+
+	sortByType = "प्रकार से",
+	stackTraceback = "स्टैक ट्रेसबैक",
+	toDirectory = "फ़ोल्डर के लिए",
+	type = "प्रकार",
+	unknown = "अनजान",
+	update = "ताज़ा करना",
+
+	updates = "अपडेट",
+	updatingFileList = "फ़ाइल सूची अपडेट की जा रही है...",
+	uploadToPastebin = "पेस्टबिन पर अपलोड करें",
+
+	uploading = "अपलोड हो रहा है...",
+	uploadingFailure = "अपलोड करना विफल:",
+	uploadingSuccess = "लोड करना",
+	yes = "हां",
+	yourContacts = "आपके संपर्क",
 }
