--- a/Localizations/Italian.lang
+++ b/Localizations/Italian.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Scaricamento in corso",
-	CPUArchitecture = "Architettura CPU",
-	RAMControl = "Controllo RAM",
-	packageUnloading = "Scarico automatico",
-	networkFTPNewConnection = "Connessione FTP",
-	networkFTPConnections = "Connessioni FTP",
-	networkFTPAddress = "Indirizzo Server",
-	networkFTPPort = "Porta Server",
-	networkFTPUser = "Utente",
-	networkFTPPassword = "Password",
-	updatingFileList = "Aggiornamento elenco file...",
+	CPUArchitecture = "Architettura della CPU",
+	RAMControl = "Controllo della RAM",
+	aboutSystem = "A proposito di sistema",
+	addToDock = "Aggiungi al Dock",
+	addToFavourites = "Aggiungi ai preferiti",
+	additionalInfo = "Informazioni aggiuntive",
+	alreadyExists = "esiste già",
+	applicationName = "Nome dell'applicazione",
+	applyToAll = "Applicare a tutto",
+	archive = "Aggiungi all'archivio",
+	areYouSure = "Sei sicuro?",
+	calculatingSize = "calcolando...",
+	cancel = "Annulla",
+	closeAllWindows = "Chiudi tutte le finestre",
+	closeWindow = "Chiudere",
+	copy = "copia",
+	copying = "Copiare",
+	create = "Nuovo",
+	createShortcut = "Creare una scorciatoia",
+	cut = "Taglio",
+	date = "Data",
+	delete = "Eliminare",
+	dontShowAnymore = "Non mostrare più",
+	downloading = "Download in corso",
+	edit = "Modificare",
+	editInPhotoshop = "Modifica in Photoshop",
+	editShortcut = "Modifica scorciatoia",
+	emptyTrash = "Svuotare la spazzatura",
+	errorWhileRunningProgram = "Errore durante l'esecuzione",
+	favourite = "Preferito",
+	faylaBlyad = "file",
+	file = "File",
+	fileName = "Nome del file",
+	flashEEPROM = "Flash su EEPROM",
+	flashingEEPROM = "Lampeggiante in corso. ",
+	folder = "Cartella",
+	folderName = "Nome della cartella",
+	inCurrentDirectory = "Nella cartella corrente",
+	inDirectory = "nella cartella",
+	keepInDock = "Resta in banchina",
+	launch = "Lanciare",
+	launchWithArguments = "Avvia con argomenti",
+	logout = "Disconnettersi",
+	mounts = "Monti",
+	moveLeft = "Muovere a sinistra",
+	moveRight = "Vai a destra",
+
+	name = "Nome",
+	needReplace = "Sostituiscilo?",
 	network = "Rete",
-	networkTimeout = "Il computer remoto non risponde",
-	networkAccessDenied = "L'accesso al filesystem del computer remoto è negato. Contatta il proprietario per ottenere i privilegi appropriati",
-	networkAllowReadAndWrite = "Accesso file system",
-	networkModemNotAvailable = "Allega il modem per utilizzare le funzioni di rete",
-	networkState = "Abilita la modalità di rete",
-	networkComputers = "Opzioni PC di rete",
+	networkAccessDenied = "L'accesso al filesystem del computer remoto è negato. ",
+	networkAllowReadAndWrite = "Accesso al file system",
+	networkComputers = "Opzioni dei PC di rete",
+	networkFTPAddress = "Indirizzo del server",
+	networkFTPConnections = "Connessioni FTP",
+	networkFTPNewConnection = "Connessione FTP",
+	networkFTPPassword = "Parola d'ordine",
+
+	networkFTPPort = "Porta del server",
+	networkFTPUser = "Utente",
+	networkModemNotAvailable = "Collega il modem per utilizzare le funzioni di rete",
 	networkName = "Nome di questo PC",
 	networkSearchRadius = "Raggio di ricerca",
-	openWith = "Apri con",
-	select = "Scegli applicazione…",
-	keepInDock = "Mantieni in bacheca",
-	closeAllWindows = "Chiudi tutte le finestre",
-	closeWindow = "Chiudi finestra",
-	newWindow = "Nuova finestra",
-	launch = "Avvia",
-	launchWithArguments = "Avvia con argomenti",
-	dontShowAnymore = "Non mostrare più.",
-	newName = "Nuovo nome",
-	folderName = "Nome cartella",
-	fileName = "Nome File",
-	applicationName = "Nome dell'applicazione",
-	file = "File",
-	notExists = "non esiste",
-	alreadyExists = "esiste già",
-	inDirectory = "nella directory",
-	needReplace = "Sostituirla?",
-	yes = "Sì",
-	no = "No",
-	cancel = "Annulla",
-	open = "Apri",
-	applyToAll = "Applica a tutti",
-	toDirectory = "alla directory",
-	copying = "Copia",
-	faylaBlyad = "file",
-
-	areYouSure = "Sei sicuro?",
-	emptyTrash = "Cestino vuoto",
-	type = "Tipo",
-	size = "Dimensione",
-	date = "Data",
-	name = "Nome",
-	path = "Percorso",
-	folder = "Cartella",
-	unknown = "Sconosciuto",
-	calculatingSize = "calcolo…",
-
-	properties = "Proprieta",
-	newFolderFromChosen = "Nuova cartella selezionata",
-	create = "Nuovo",
-	newFolder = "Cartella",
-	newFile = "File",
-	newFileFromURL = "File DALL'URL",
-	newImage = "Immagine",
+	networkState = "Abilita la modalità di rete",
+	networkTimeout = "Il computer remoto non risponde",
 	newApplication = "Applicazione MineOS",
-	paste = "Incolla",
-	copy = "Copia",
-	cut = "Taglia",
-	edit = "Modifica",
-	editInPhotoshop = "Modifica con Photoshop",
-	rename = "Rinomina",
-	editShortcut = "Modifica scorciatoia",
-	createShortcut = "Crea scorciatoia",
-	addToDock = "Aggiungi alla bacheca",
-	removeFromDock = "Rimuovi Dalla bacheca",
-	moveRight = "Sposta a destra",
-	moveLeft = "Sposta a sinistra",
-	archive = "Aggiungi all'archivio",
-	delete = "Elimina",
-	addToFavourites = "Aggiungi ai preferiti",
-	removeFromFavourites = "Rimuovi dai preferiti",
-	setAsWallpaper = "Imposta come sfondo",
-	showPackageContent = "Mostra il contenuto del pacco",
-	showContainingFolder = "Mostra cartella contenente",
-	flashEEPROM = "Flash EEPROM",
-	flashingEEPROM = "Sta lampeggiando. Non spegnere il computer...",
-	print3D = "Stampa modello",
-
-	sortBy = "Genere",
-	sortByType = "Per tipo",
-	sortByName = "Per nome",
-	sortByDate = "Per data",
-
-	aboutSystem = "Informazioni sul sistema",
-	updates = "Aggiornati",
-	update = "Aggiornato",
-	shutdown = "Spegni",
-	logout = "Esci",
-	reboot = "Riavvia",
-
-	shortcutIsCorrupted = "La scorciatoia è collegata a un file inesistente",
-	sortAutomatically = "Allinea alla griglia",
+	newFile = "File",
+	newFileFromURL = "File da URL",
+	newFolder = "Cartella",
+	newFolderFromChosen = "Nuova cartella da scelta",
+	newImage = "Immagine",
+	newName = "Nuovo nome",
+	newWindow = "Nuova finestra",
+	no = "No",
+	notExists = "non esiste",
 	onDesktop = "Sul desktop",
-	inCurrentDirectory = "Nella directory corrente",
+	open = "Aprire",
+	openWith = "Aperto con",
+	packageUnloading = "Scarico automatico",
+	paste = "Incolla",
+	pasteName = "Incolla il nome",
+	path = "Il percorso",
+	print3D = "Modello di stampa",
+	properties = "Proprietà",
+	reboot = "Riavviare",
+	removeFromDock = "Rimuovi dal Dock",
+	removeFromFavourites = "Rimuovi dai preferiti",
+	rename = "Rinominare",
 
-	errorWhileRunningProgram = "Errore durante l'esecuzione ",
-	sendedFeedback = "È stato inviato un Feedback",
-	sendFeedback = "Invia commenti",
-	yourContacts = "I propri contatti",
-	additionalInfo = "Informazioni supplementari",
-	stackTraceback = "Traceback in pila",
-
-	favourite = "Preferito",
 	search = "Ricerca",
-	mounts = "Mounts",
+	select = "Scegli applicazione...",
+	sendFeedback = "Invia feedback",
+	sendedFeedback = "Il feedback è stato inviato",
 
+	setAsWallpaper = "Imposta come sfondo",
+	shortcutIsCorrupted = "Il collegamento è collegato a un file inesistente",
+	showContainingFolder = "Mostra cartella contenente",
+	showPackageContent = "Mostra il contenuto del pacchetto",
+	shutdown = "Spegnimento",
+	size = "Misurare",
+
+	sortAutomatically = "Allinea alla griglia",
+	sortBy = "Ordinare",
+	sortByDate = "Per data",
+	sortByName = "Per nome",
+
+	sortByType = "Per tipo",
+	stackTraceback = "Tracciamento dello stack",
+	toDirectory = "alla cartella",
+	type = "Tipo",
+	unknown = "Sconosciuto",
+	update = "ricaricare",
+
+	updates = "Aggiornamenti",
+	updatingFileList = "Aggiornamento elenco file...",
 	uploadToPastebin = "Carica su Pastebin",
-	pasteName = "Incolla nome",
+
 	uploading = "Caricamento in corso...",
-	uploadingSuccess = "Caricato su ",
 	uploadingFailure = "Caricamento fallito:",
+	uploadingSuccess = "Caricato su",
+	yes = "sì",
+	yourContacts = "I tuoi contatti",
 }
