--- a/Localizations/Japanese.lang
+++ b/Localizations/Japanese.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "ダウンロード中です",
 	CPUArchitecture = "CPUアーキテクチャ",
-	RAMControl = "RAMコントロール",
-	packageUnloading = "Automatic unloading",
-	networkFTPNewConnection = "新規FTP接続",
-	networkFTPConnections = "FTP接続",
-	networkFTPAddress = "サーバーアドレス",
-	networkFTPPort = "ポート",
-	networkFTPUser = "ユーザー名",
-	networkFTPPassword = "パスワード",
-	updatingFileList = "ファイルリストをアップデート中...",
-	network = "ネットワーク",
-	networkTimeout = "リモートコンピュータが応答していません",
-	networkAccessDenied = "リモートコンピュータのファイルシステムへのアクセスが拒否されました。 適切な権限を取得するには、所有者に連絡してください",
-	networkAllowReadAndWrite = "ファイルシステムへのアクセス",
-	networkModemNotAvailable = "ネットワーク機能を使用するためにモデムを接続する",
-	networkState = "ネットワークモードを有効にする",
-	networkComputers = "ネットワークPCの設定",
-	networkName = "PC名",
-	networkSearchRadius = "検索する半径",
-	openWith = "openWith",
-	select = "アプリを選択…",
-	keepInDock = "Dockに保存",
-	closeAllWindows = "全てのウィンドウを閉じる",
-	closeWindow = "閉じる",
-	newWindow = "新規ウィンドウ",
-	launch = "起動",
-	launchWithArguments = "引数で起動する",
-	dontShowAnymore = "二度と表示しない",
-	newName = "New name",
-	folderName = "フォルダー名",
-	fileName = "ファイル名",
-	applicationName = "アプリ名",
-	file = "ファイル",
-	notExists = "存在しません",
-	alreadyExists = "既に存在しています",
-	inDirectory = "in folder",
-	needReplace = "置き換えますか?",
-	yes = "はい",
-	no = "いいえ",
-	cancel = "キャンセル",
-	open = "開く",
-	applyToAll = "全てに適用",
-	toDirectory = "to folder",
-	copying = "コピー中",
-	faylaBlyad = "ファイル",
-
-	areYouSure = "本当に実行しますか?",
-	emptyTrash = "ゴミ箱を空にする",
-	type = "種類",
-	size = "サイズ",
-	date = "日付",
-	name = "名前",
-	path = "パス",
-	folder = "フォルダー",
-	unknown = "不明",
+	RAMControl = "RAM制御",
+	aboutSystem = "システムについて",
+	addToDock = "ドックに追加",
+	addToFavourites = "お気に入りに追加",
+	additionalInfo = "追加情報",
+	alreadyExists = "もう存在している",
+	applicationName = "アプリケーション名",
+	applyToAll = "すべてに適用",
+	archive = "アーカイブに加える",
+	areYouSure = "本気ですか？",
 	calculatingSize = "計算中…",
-
-	properties = "プロパティ",
-	newFolderFromChosen = "選択したフォルダから新しいフォルダを作成",
-	create = "新規",
-	newFolder = "フォルダー",
-	newFile = "ファイル",
-	newFileFromURL = "URLからファイルを取得",
-	newImage = "画像",
-	newApplication = "MineOSアプリ",
-	paste = "貼り付け",
+	cancel = "キャンセル",
+	closeAllWindows = "すべてのウィンドウを閉じる",
+	closeWindow = "選ぶ",
 	copy = "コピー",
-	cut = "切り取り",
+	copying = "コピー",
+	create = "新しい",
+	createShortcut = "ショートカットを作成する",
+	cut = "切る",
+	date = "日にち",
+	delete = "消去",
+	dontShowAnymore = "二度と表示しない",
+	downloading = "ダウンロード中",
 	edit = "編集",
 	editInPhotoshop = "Photoshopで編集",
-	rename = "名前を変更　",
-	editShortcut = "ショートカットを編集",
-	createShortcut = "ショートカットを作成",
-	addToDock = "Dockに追加",
-	removeFromDock = "Dockから削除",
-	moveRight = "右に移動",
-	moveLeft = "左に移動",
-	archive = "アーカイブに追加",
-	delete = "削除",
-	addToFavourites = "お気に入りに追加",
-	removeFromFavourites = "お気に入りから削除",
-	setAsWallpaper = "壁紙を設定",
-	showPackageContent = "パッケージ内容を表示",
-	showContainingFolder = "含むフォルダを表示",
-	flashEEPROM = "EEPROMに焼く",
-	flashingEEPROM = "EEPROMにコピー中です。電源を切らないでください...",
-	print3D = "プリントモデル",
-
-	sortBy = "順序",
-	sortByType = "ファイルタイプ",
-	sortByName = "名前",
-	sortByDate = "日付",
-
-	aboutSystem = "システムについて",
-	updates = "更新",
-	update = "リフレッシュ",
-	shutdown = "シャットダウン",
-	logout = "ログアウト",
-	reboot = "再起動",
-
-	shortcutIsCorrupted = "ショートカットが存在しないファイルにリンクされています",
-	sortAutomatically = "グリッドに合わせて調整",
-	onDesktop = "デスクトップ上",
-	inCurrentDirectory = "現在のフォルダ内",
-
-	errorWhileRunningProgram = "実行中のエラー ",
-	sendedFeedback = "フィードバックが送信されました",
-	sendFeedback = "フィードバックを送る",
-	yourContacts = "あなたの問い合わせ先",
-	additionalInfo = "追加情報",
-	stackTraceback = "Stack traceback",
-
+	editShortcut = "ショートカットの編集",
+	emptyTrash = "空のごみ箱",
+	errorWhileRunningProgram = "実行中のエラー",
 	favourite = "お気に入り",
-	search = "検索",
-	mounts = "Mounts",
+	faylaBlyad = "ファイル",
+	file = "ファイル",
+	fileName = "ファイル名",
+	flashEEPROM = "EEPROMへのフラッシュ",
+	flashingEEPROM = "点滅中です。",
+	folder = "フォルダ",
+	folderName = "フォルダ名",
+	inCurrentDirectory = "現在のフォルダ内",
+	inDirectory = "フォルダ内",
+	keepInDock = "ドックに保管",
+	launch = "発売",
+	launchWithArguments = "引数付きで起動",
+	logout = "ログアウト",
+	mounts = "マウント",
+	moveLeft = "左に移動",
+	moveRight = "右に動く",
 
+	name = "名前",
+	needReplace = "交換しますか？",
+	network = "通信網",
+	networkAccessDenied = "リモートコンピュータのファイルシステムへのアクセスが拒否されました。",
+	networkAllowReadAndWrite = "ファイルシステムへのアクセス",
+	networkComputers = "ネットワークPCオプション",
+	networkFTPAddress = "サーバーアドレス",
+	networkFTPConnections = "FTP接続",
+	networkFTPNewConnection = "FTP接続",
+	networkFTPPassword = "パスワード",
+
+	networkFTPPort = "サーバポート",
+	networkFTPUser = "ユーザー",
+	networkModemNotAvailable = "ネットワーク機能を使用するためにモデムを接続する",
+	networkName = "このPCの名前",
+	networkSearchRadius = "検索半径",
+	networkState = "ネットワークモードを有効にする",
+	networkTimeout = "リモートコンピュータが応答していません",
+	newApplication = "MineOSアプリケーション",
+	newFile = "ファイル",
+	newFileFromURL = "URLからのファイル",
+	newFolder = "フォルダ",
+	newFolderFromChosen = "選択した新しいフォルダ",
+	newImage = "画像",
+	newName = "新しい名前",
+	newWindow = "新しい窓",
+	no = "いいえ",
+	notExists = "存在しない",
+	onDesktop = "デスクトップ上",
+	open = "開ける",
+	openWith = "で開く",
+	packageUnloading = "自動アンロード",
+	paste = "ペースト",
+	pasteName = "名前を貼り付け",
+	path = "道",
+	print3D = "印刷モデル",
+	properties = "プロパティ",
+	reboot = "リブート",
+	removeFromDock = "ドックから削除",
+	removeFromFavourites = "お気に入りから削除",
+	rename = "名前を変更",
+
+	search = "探す",
+	select = "アプリケーションを選択…",
+	sendFeedback = "フィードバックを送信する",
+	sendedFeedback = "フィードバックが送信されました",
+
+	setAsWallpaper = "壁紙として設定",
+	shortcutIsCorrupted = "ショートカットは存在しないファイルにリンクされています",
+	showContainingFolder = "含まれているフォルダを表示する",
+	showPackageContent = "パッケージの内容を表示する",
+	shutdown = "シャットダウン",
+	size = "サイズ",
+
+	sortAutomatically = "グリッドに合わせて調整します",
+	sortBy = "選別",
+	sortByDate = "日付別",
+	sortByName = "名前で",
+
+	sortByType = "タイプ別",
+	stackTraceback = "スタックトレースバック",
+	toDirectory = "フォルダに",
+	type = "タイプ",
+	unknown = "わからない",
+	update = "更新",
+
+	updates = "更新",
+	updatingFileList = "ファイルリストを更新しています...",
 	uploadToPastebin = "Pastebinにアップロード",
-	pasteName = "Paste name",
-	uploading = "アップロード中です...",
-	uploadingSuccess = "Uploaded to ",
-	uploadingFailure = "アップロード失敗: ",
+
+	uploading = "アップロード中...",
+	uploadingFailure = "アップロードに失敗しました：",
+	uploadingSuccess = "にアップロード",
+	yes = "はい",
+	yourContacts = "あなたの連絡先",
 }
