--- a/Localizations/Polish.lang
+++ b/Localizations/Polish.lang
@@ -1,124 +1,124 @@
 {
+	CPUArchitecture = "Architektura procesora",
+	RAMControl = "Kontrola pamięci RAM",
+	aboutSystem = "O systemie",
+	addToDock = "Dodaj do Docka",
+	addToFavourites = "Dodaj do ulubionych",
+	additionalInfo = "Dodatkowe informacje",
+	alreadyExists = "już istnieje",
+	applicationName = "Nazwa aplikacji",
+	applyToAll = "Stosuje się do wszystkich",
+	archive = "Dodaj do archiwum",
+	areYouSure = "Jesteś pewny?",
+	calculatingSize = "obliczenie…",
+	cancel = "Anulować",
+	closeAllWindows = "Zamknij wszystkie okna",
+	closeWindow = "Blisko",
+	copy = "Kopiuj",
+	copying = "Biurowy",
+	create = "Nowy",
+	createShortcut = "Utwórz skrót",
+	cut = "Skaleczenie",
+	date = "Data",
+	delete = "Usunąć",
+	dontShowAnymore = "Nie pokazuj ponownie",
 	downloading = "Trwa pobieranie",
-	CPUArchitecture = "Architektura CPU",
-	RAMControl = "Kontrola RAM",
-	packageUnloading = "Automatyczne odłączanie",
-	networkFTPNewConnection = "Połączenie-FTP",
-	networkFTPConnections = "Połączono-FTP",
+	edit = "Edytować",
+	editInPhotoshop = "Edytuj w Photoshopie",
+	editShortcut = "Edytuj skrót",
+	emptyTrash = "Opróżnić kosz",
+	errorWhileRunningProgram = "Błąd podczas pracy",
+	favourite = "Ulubiony",
+	faylaBlyad = "plik",
+	file = "Plik",
+	fileName = "Nazwa pliku",
+	flashEEPROM = "Flash do EEPROM",
+	flashingEEPROM = "Miga w toku. ",
+	folder = "Teczka",
+	folderName = "Nazwa folderu",
+	inCurrentDirectory = "W bieżącym folderze",
+	inDirectory = "w folderze",
+	keepInDock = "Trzymaj w doku",
+	launch = "Początek",
+	launchWithArguments = "Uruchom z argumentami",
+	logout = "Wyloguj",
+	mounts = "Wierzchowce",
+	moveLeft = "Przesuń w lewo",
+	moveRight = "Ruch w prawo",
+
+	name = "Nazwać",
+	needReplace = "Wymień?",
+	network = "Sieć",
+	networkAccessDenied = "Odmowa dostępu do systemu plików zdalnego komputera. ",
+	networkAllowReadAndWrite = "Dostęp do systemu plików",
+	networkComputers = "Opcje komputerów sieciowych",
 	networkFTPAddress = "Adres serwera",
+	networkFTPConnections = "Połączenia FTP",
+	networkFTPNewConnection = "Połączenie FTP",
+	networkFTPPassword = "Hasło",
+
 	networkFTPPort = "Port serwera",
 	networkFTPUser = "Użytkownik",
-	networkFTPPassword = "Hasło",
-	updatingFileList = "Aktualizowanie listy plików...",
-	network = "Sieć",
-	networkTimeout = "Zdalny komputer jest nieosiągalny",
-	networkAccessDenied = "Brak dostępu do zdalnego katalogu plików. Skontaktuj się z jego właścicielem, aby uzyskać odpowiednie uprawnienia.",
-	networkAllowReadAndWrite = "Dostęp do plików systemowych",
-	networkModemNotAvailable = "Aby skorzystać z funkcji sieciowej podłącz modem",
+	networkModemNotAvailable = "Podłącz modem, aby korzystać z funkcji sieciowych",
+	networkName = "Nazwa tego komputera",
+	networkSearchRadius = "Promień wyszukiwania",
 	networkState = "Włącz tryb sieciowy",
-	networkComputers = "Ustawienia komputerów w sieci",
-	networkName = "Nazwa tego PC",
-	networkSearchRadius = "Zasięg poszukiwań",
-	openWith = "Otwórz z",
-	select = "Wybierz program…",
-	keepInDock = "Zachowaj w doku",
-	closeAllWindows = "Zamknij wszystkie okna",
-	closeWindow = "Zamknij",
-	newWindow = "Nowe okno",
-	launch = "Uruchom",
-	launchWithArguments = "Uruchom z argumentem",
-	dontShowAnymore = "Nie pokazuj ponownie",
-	newName = "Nowa nazwa",
-	folderName = "Nazwa folderu",
-	fileName = "Nazwa pliku",
-	applicationName = "Nazwa programu",
-	file = "Plik",
-	notExists = "nie istnieje",
-	alreadyExists = "już istnieje",
-	inDirectory = "w folderze",
-	needReplace = "Podmienić?",
-	yes = "Tak",
-	no = "Nie",
-	cancel = "Anuluj",
-	open = "Otwórz",
-	applyToAll = "Zastosuj dla wszystkich",
-	toDirectory = "do folderu",
-	copying = "Kopiuj",
-	faylaBlyad = "plik",
-
-	areYouSure = "Na pewno?",
-	emptyTrash = "Opróżnij kosz",
-	type = "Typ",
-	size = "Rozmiar",
-	date = "Data",
-	name = "Nazwa",
-	path = "Ścieżka",
-	folder = "Folder",
-	unknown = "Nieznany",
-	calculatingSize = "obliczanie…",
-
-	properties = "Ustawienia",
-	newFolderFromChosen = "Wybierz Nowy Folder z",
-	create = "Nowy",
-	newFolder = "Folder",
+	networkTimeout = "Komputer zdalny nie odpowiada",
+	newApplication = "Aplikacja MineOS",
 	newFile = "Plik",
 	newFileFromURL = "Plik z adresu URL",
-	newImage = "Grafika",
-	newApplication = "Aplikacje MineOS",
-	paste = "Wklej",
-	copy = "Kopiuj",
-	cut = "Wytnij",
-	edit = "Edytuj",
-	editInPhotoshop = "Edytuj w Photoshop",
-	rename = "Zmień nazwę",
-	editShortcut = "Edytuj skrót",
-	createShortcut = "Utwórz skrót",
-	addToDock = "Dodaj do docku",
-	removeFromDock = "Usuń z docku",
-	moveRight = "Przesuń w prawo",
-	moveLeft = "Przesuń w lewo",
-	archive = "Dodaj do archiwum",
-	delete = "Usuń",
-	addToFavourites = "Dodaj do ulubionych",
+	newFolder = "Teczka",
+	newFolderFromChosen = "Nowy folder z wybranego",
+	newImage = "Obraz",
+	newName = "Nowe imie",
+	newWindow = "Nowe okno",
+	no = "Nie",
+	notExists = "nie istnieje",
+	onDesktop = "Na pulpicie",
+	open = "otwarty",
+	openWith = "Otwierać z",
+	packageUnloading = "Rozładunek automatyczny",
+	paste = "Pasta",
+	pasteName = "Wklej nazwę",
+	path = "Ścieżka",
+	print3D = "Wydrukuj model",
+	properties = "Nieruchomości",
+	reboot = "Ponowne uruchomienie",
+	removeFromDock = "Usuń z Docka",
 	removeFromFavourites = "Usuń z ulubionych",
-	setAsWallpaper = "Ustaw jako tapetę",
-	showPackageContent = "Pokaż zawartość paczki",
-	showContainingFolder = "Pokaż zawartość folderu",
-	flashEEPROM = "Wgraj na EEPROM",
-	flashingEEPROM = "Trwa wgrywanie. Nie wyłączaj komputera...",
-	print3D = "Wydrukuj model 3D",
+	rename = "Przemianować",
 
-	sortBy = "Sortuj",
-	sortByType = "Wg typu",
-	sortByName = "Wg nazwy",
-	sortByDate = "Wg daty",
-
-	aboutSystem = "O systemie",
-	updates = "Aktualizacja",
-	update = "Odśwież",
-	shutdown = "Wyłącz",
-	logout = "Wyloguj",
-	reboot = "Uruchom ponownie",
-
-	shortcutIsCorrupted = "Skrót jest podpięty do nieistniejącego pliku",
-	sortAutomatically = "Wyrównaj do siatki",
-	onDesktop = "Na pulpit",
-	inCurrentDirectory = "W obecnym folderze",
-
-	errorWhileRunningProgram = "Błąd podczas uruchamiania ",
-	sendedFeedback = "Wysłano opinię",
-	sendFeedback = "Wyślij opinię",
-	yourContacts = "Twoje kontakty",
-	additionalInfo = "Dodatkowe informacje",
-	stackTraceback = "Identyfikator",
-
-	favourite = "Ulubione",
 	search = "Szukaj",
-	mounts = "Zamontuj",
+	select = "Wybierz aplikację…",
+	sendFeedback = "Wyślij opinię",
+	sendedFeedback = "Opinia została wysłana",
 
-	uploadToPastebin = "Wyślij do Pastebin",
-	pasteName = "Nazwa Paste",
-	uploading = "Trwa wysyłanie...",
-	uploadingSuccess = "Wysłano do ",
-	uploadingFailure = "Błąd wysyłania: "
+	setAsWallpaper = "Ustaw jako tapetę",
+	shortcutIsCorrupted = "Skrót jest połączony z nieistniejącym plikiem",
+	showContainingFolder = "Pokaż folder zawierający",
+	showPackageContent = "Pokaż zawartość pakietu",
+	shutdown = "Zamknąć",
+	size = "Rozmiar",
+
+	sortAutomatically = "Wyrównać do siatki",
+	sortBy = "Sortować",
+	sortByDate = "Według daty",
+	sortByName = "Wg nazwy",
+
+	sortByType = "Według rodzaju",
+	stackTraceback = "Śledzenie stosu",
+	toDirectory = "do folderu",
+	type = "Rodzaj",
+	unknown = "Nieznany",
+	update = "Odświeżać",
+
+	updates = "Aktualizacje",
+	updatingFileList = "Aktualizuję listę plików...",
+	uploadToPastebin = "Prześlij do Pastebin",
+
+	uploading = "Trwa przesyłanie...",
+	uploadingFailure = "Przesyłanie nie powiodło się:",
+	uploadingSuccess = "Przesłano do",
+	yes = "tak",
+	yourContacts = "Twoje kontakty",
 }
