--- a/Localizations/Portuguese.lang
+++ b/Localizations/Portuguese.lang
@@ -1,116 +1,124 @@
 {
-	downloading = "Download em andamento",
 	CPUArchitecture = "Arquitetura da CPU",
 	RAMControl = "Controle de RAM",
-	packageUnloading = "Descarregamento automático",
-	networkFTPNewConnection = "Conexão FTP",
-	networkFTPConnections = "Conexões FTP",
-	networkFTPAddress = "Endereço do servidor",
-	networkFTPPort = "Porta do servidor",
-	networkFTPUser = "Usuário",
-	networkFTPPassword = "Senha",
-	updatingFileList = "Atualizando lista de arquivos ...",
-	network = "Rede",
-	networkTimeout = "O computador remoto não está respondendo",
-	networkAccessDenied = "O acesso ao sistema de arquivos do computador remoto foi negado. Contate seu proprietário para obter os privilégios apropriados",
-	networkAllowReadAndWrite = "Acesso ao sistema de arquivos",
-	networkModemNotAvailable = "Conecte o modem para usar as funções de rede",
-	networkState = "Habilite o modo de rede",
-	networkComputers = "Opções de PCs de rede",
-	networkName = "Nome deste PC",
-	networkSearchRadius = "Raio de pesquisa",
-	openWith = "Abra com",
-	select = "Escolha o aplicativo…",
-	keepInDock = "​​Manter no dock",
-	closeAllWindows = "Fechar todas as janelas",
-	closeWindow = "Fechar",
-	newWindow = "Nova janela",
-	launch = "Iniciar",
-	launchWithArguments = "Iniciar com argumentos",
-	dontShowAnymore = "Não mostrar novamente",
-	newName = "Novo nome",
-	folderName = "Nome da pasta",
-	fileName = "Nome do arquivo",
-	applicationName = "Nome do aplicativo",
-	file = "Arquivo",
-	notExists = "não existe",
+	aboutSystem = "Sobre o sistema",
+	addToDock = "Adicionar ao Dock",
+	addToFavourites = "Adicionar aos favoritos",
+	additionalInfo = "Informação adicional",
 	alreadyExists = "já existe",
-	inDirectory = "na pasta",
-	needReplace = "Substituir?",
-	yes = "Sim",
-	no = "Não",
-	cancel = "Cancelar",
-	open = "Abrir",
+	applicationName = "Nome da Aplicação",
 	applyToAll = "Aplicar a todos",
-	toDirectory = "para a pasta",
-	copying = "Copiar",
-	faylaBlyad = "arquivo",
+	archive = "Adicionar ao arquivo",
 	areYouSure = "Tem certeza?",
-	emptyTrash = "Esvaziar lixeira",
-	type = "Tipo",
-	size = "Tamanho",
-	date = "Data",
-	name = "Nome",
-	path = "Caminho",
-	folder = "Pasta",
-	unknown = "Desconhecido",
-	calculatingSize = "calculando…",
-	properties = "Propriedades",
-	newFolderFromChosen = "Nova pasta escolhida",
+	calculatingSize = "calculando...",
+	cancel = "Cancelar",
+	closeAllWindows = "Feche todas as janelas",
+	closeWindow = "Perto",
+	copy = "cópia de",
+	copying = "Copiando",
 	create = "Novo",
-	newFolder = "Pasta",
-	newFile = "Arquivo",
-	newFileFromURL = "Arquivo de URL",
-	newImage = "Imagem",
-	newApplication = "Aplicativo MineOS",
-	paste = "Colar",
-	copy = "Copiar",
-	cut = "Recortar",
+	createShortcut = "Criar atalho",
+	cut = "Cortar",
+	date = "Encontro",
+	delete = "Excluir",
+	dontShowAnymore = "Não mostre novamente",
+	downloading = "Baixando em andamento",
 	edit = "Editar",
 	editInPhotoshop = "Editar no Photoshop",
-	rename = "Renomear",
 	editShortcut = "Editar atalho",
-	createShortcut = "Criar atalho",
-	addToDock = "Adicionar to Dock",
-	removeFromDock = "Remover do Dock",
-	moveRight = "Mover para a direita",
-	moveLeft = "Mover para a esquerda",
-	archive = "Adicionar ao arquivo",
-	delete = "Excluir",
-	addToFavourites = "Adicionar aos favoritos",
-	removeFromFavourites = "Remover fr om favoritos",
-	setAsWallpaper = "Definir como papel de parede",
-	showPackageContent = "Mostrar conteúdo do pacote",
-	showContainingFolder = "Mostrar pasta contendo",
-	flashEEPROM = "Flash para EEPROM",
-	flashingEEPROM = "Piscando em andamento. Não desligue o computador ...",
-	print3D = "Imprimir modelo",
-	sortBy = "Classificar",
-	sortByType = "Por tipo",
-	sortByName = "Por nome",
-	sortByDate = "Por data",
-	aboutSystem = "Sobre o sistema",
-	updates = "Atualizações",
-	update = "Atualizar",
-	shutdown = "Desligar",
-	logout = "Sair",
-	reboot = "Reiniciar",
-	shortcutIsCorrupted = "O atalho está vinculado a um arquivo inexistente",
-	sortAutomatically = "Alinhar à grade",
-	onDesktop = "Na área de trabalho",
-	inCurrentDirectory = "Na pasta atua",
-	errorWhileRunningProgram = "Erro ao executar ",
-	sendedFeedback = "Feedback foi enviado",
-	sendFeedback = "Enviar feedback",
-	yourContacts = "Seus contatos",
-	additionalInfo = "Informações adicionais",
-	stackTraceback = "Stack traceback",
+	emptyTrash = "Lixo vazio",
+	errorWhileRunningProgram = "Erro ao executar",
 	favourite = "Favorito",
-	search = "Pesquisar",
+	faylaBlyad = "Arquivo",
+	file = "Arquivo",
+	fileName = "Nome do arquivo",
+	flashEEPROM = "Flash para EEPROM",
+	flashingEEPROM = "Piscando em andamento. ",
+	folder = "Pasta",
+	folderName = "Nome da pasta",
+	inCurrentDirectory = "Na pasta atual",
+	inDirectory = "na pasta",
+	keepInDock = "Manter na doca",
+	launch = "Lançar",
+	launchWithArguments = "Iniciar com argumentos",
+	logout = "Sair",
 	mounts = "Montagens",
-	uploadToPastebin = "Carregar para Pastebin",
+	moveLeft = "Mova para a esquerda",
+	moveRight = "Mover para a direita",
+
+	name = "Nome",
+	needReplace = "Substituir?",
+	network = "Rede",
+	networkAccessDenied = "O acesso ao sistema de arquivos do computador remoto é negado. ",
+	networkAllowReadAndWrite = "Acesso ao sistema de arquivos",
+	networkComputers = "Opções de PCs de rede",
+	networkFTPAddress = "Endereço do servidor",
+	networkFTPConnections = "Conexões FTP",
+	networkFTPNewConnection = "Conexão FTP",
+	networkFTPPassword = "Senha",
+
+	networkFTPPort = "Porta do servidor",
+	networkFTPUser = "Do utilizador",
+	networkModemNotAvailable = "Anexar modem para usar funções de rede",
+	networkName = "Nome deste computador",
+	networkSearchRadius = "Raio de pesquisa",
+	networkState = "Ativar modo de rede",
+	networkTimeout = "O computador remoto não está respondendo",
+	newApplication = "Aplicativo MineOS",
+	newFile = "Arquivo",
+	newFileFromURL = "Arquivo do URL",
+	newFolder = "Pasta",
+	newFolderFromChosen = "Nova pasta da escolhida",
+	newImage = "Imagem",
+	newName = "Novo nome",
+	newWindow = "Nova janela",
+	no = "Não",
+	notExists = "não existe",
+	onDesktop = "Na área de trabalho",
+	open = "Aberto",
+	openWith = "Abrir com",
+	packageUnloading = "Descarga automática",
+	paste = "Colar",
 	pasteName = "Colar nome",
-	uploading = "Envio em andamento ...",
-	uploadingSuccess = "Envio para ",
-	uploadingFailure = "Falha no envio: "
+	path = "Caminho",
+	print3D = "Imprimir modelo",
+	properties = "Propriedades",
+	reboot = "Reinício",
+	removeFromDock = "Remover do Dock",
+	removeFromFavourites = "Remova dos favoritos",
+	rename = "Renomear",
+
+	search = "Procurar",
+	select = "Escolha o aplicativo…",
+	sendFeedback = "Enviar comentários",
+	sendedFeedback = "O feedback foi enviado",
+
+	setAsWallpaper = "Definir como Papel de Parede",
+	shortcutIsCorrupted = "O atalho está vinculado a um arquivo inexistente",
+	showContainingFolder = "Mostrar pasta contendo",
+	showPackageContent = "Mostrar conteúdo do pacote",
+	shutdown = "Desligar",
+	size = "Tamanho",
+
+	sortAutomatically = "Alinhar à grade",
+	sortBy = "Ordenar",
+	sortByDate = "Por data",
+	sortByName = "Por nome",
+
+	sortByType = "Por tipo",
+	stackTraceback = "Rastreamento de pilha",
+	toDirectory = "para pasta",
+	type = "Tipo",
+	unknown = "Desconhecido",
+	update = "Atualizar",
+
+	updates = "Atualizações",
+	updatingFileList = "Atualizando lista de arquivos...",
+	uploadToPastebin = "Carregar para Pastebin",
+
+	uploading = "Carregando em andamento...",
+	uploadingFailure = "Falha ao enviar:",
+	uploadingSuccess = "Carregado para",
+	yes = "Sim",
+	yourContacts = "Seus contatos",
 }
