--- a/Localizations/Russian.lang
+++ b/Localizations/Russian.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Идет загрузка файла",
-	CPUArchitecture = "Архитектура ЦП",
-	RAMControl = "Управление памятью",
-	packageUnloading = "Автоматическая выгрузка",
-	networkFTPNewConnection = "FTP-подключение",
-	networkFTPConnections = "FTP-подключения",
+	CPUArchitecture = "Архитектура процессора",
+	RAMControl = "управление оперативной памятью",
+	aboutSystem = "О системе",
+	addToDock = "Добавить в док",
+	addToFavourites = "Добавить в избранное",
+	additionalInfo = "Дополнительная информация",
+	alreadyExists = "уже существует",
+	applicationName = "Имя приложения",
+	applyToAll = "Применить ко всему",
+	archive = "Добавить в архив",
+	areYouSure = "Уверены ли вы?",
+	calculatingSize = "расчет…",
+	cancel = "Отмена",
+	closeAllWindows = "Закрыть все окна",
+	closeWindow = "Закрывать",
+	copy = "Копировать",
+	copying = "Копирование",
+	create = "Новый",
+	createShortcut = "Создать ярлык",
+	cut = "Резать",
+	date = "Дата",
+	delete = "Удалить",
+	dontShowAnymore = "Больше не показывать",
+	downloading = "Выполняется загрузка",
+	edit = "Редактировать",
+	editInPhotoshop = "Обработать в фотошопе",
+	editShortcut = "Изменить ярлык",
+	emptyTrash = "Очистить корзину",
+	errorWhileRunningProgram = "Ошибка при запуске",
+	favourite = "Любимый",
+	faylaBlyad = "файл",
+	file = "Файл",
+	fileName = "Имя файла",
+	flashEEPROM = "Прошить в EEPROM",
+	flashingEEPROM = "Выполняется перепрошивка. ",
+	folder = "Папка",
+	folderName = "Имя папки",
+	inCurrentDirectory = "В текущей папке",
+	inDirectory = "в папке",
+	keepInDock = "Держите в доке",
+	launch = "Запуск",
+	launchWithArguments = "Запустить с аргументами",
+	logout = "Выйти",
+	mounts = "Маунты",
+	moveLeft = "Двигай влево",
+	moveRight = "Переместить вправо",
+
+	name = "Имя",
+	needReplace = "Замени это?",
+	network = "Сеть",
+	networkAccessDenied = "Доступ к файловой системе удаленного компьютера запрещен. ",
+	networkAllowReadAndWrite = "Доступ к файловой системе",
+	networkComputers = "Параметры сетевых ПК",
 	networkFTPAddress = "Адрес сервера",
+	networkFTPConnections = "FTP-соединения",
+	networkFTPNewConnection = "FTP-соединение",
+	networkFTPPassword = "Пароль",
+
 	networkFTPPort = "Порт сервера",
 	networkFTPUser = "Пользователь",
-	networkFTPPassword = "Пароль",
-	updatingFileList = "Обновление списка файлов...",
-	network = "Сеть",
-	networkTimeout = "Удаленный компьютер не ответил на запрос",
-	networkAccessDenied = "Доступ к файловой системе удаленного компьютера запрещен. Свяжитесь с его владельцем для предоставления соответствующих привилегий",
-	networkAllowReadAndWrite = "Доступ к файлам",
 	networkModemNotAvailable = "Подключите модем для использования сетевых функций",
+	networkName = "Имя этого ПК",
+	networkSearchRadius = "Радиус поиска",
 	networkState = "Включить сетевой режим",
-	networkComputers = "Параметры удаленных ПК",
-	networkName = "Имя данного ПК",
-	networkSearchRadius = "Радиус обнаружения",
-	openWith = "Открыть с помощью",
-	select = "Выбрать программу…",
-	keepInDock = "Оставить в Dock",
-	closeAllWindows = "Закрыть все окна",
-	closeWindow = "Закрыть",
-	newWindow = "Новое окно",
-	launch = "Запустить",
-	launchWithArguments = "Запустить с аргументами",
-	dontShowAnymore = "Больше не показывать",
-	newName = "Новое имя",
-	folderName = "Имя папки",
-	fileName = "Имя файла",
-	applicationName = "Имя приложения",
-	file = "Файл",
-	notExists = "не существует",
-	alreadyExists = "уже существует",
-	inDirectory = "в директории",
-	needReplace = "Заменить?",
-	yes = "Да",
-	no = "Нет",
-	cancel = "Отмена",
-	open = "Открыть",
-	applyToAll = "Применить ко всем",
-	toDirectory = "в директории",
-	copying = "Копирование",
-	faylaBlyad = "файла",
-
-	areYouSure = "Вы уверены?",
-	emptyTrash = "Очистить корзину",
-	type = "Тип",
-	size = "Размер",
-	date = "Дата",
-	name = "Имя",
-	path = "Путь",
-	folder = "Папка",
-	unknown = "Неизвестно",
-	calculatingSize = "идет подсчет…",
-	
-	properties = "Свойства",
-	newFolderFromChosen = "Новая папка из выбранного",
-	create = "Создать",
-	newFolder = "Папку",
-	newFile = "Файл",
-	newFileFromURL = "Файл по URL",
-	newImage = "Изображение",
+	networkTimeout = "Удаленный компьютер не отвечает",
 	newApplication = "Приложение MineOS",
-	paste = "Вставить",
-	copy = "Копировать",
-	cut = "Вырезать",
-	edit = "Редактировать",
-	editInPhotoshop = "Редактировать в Photoshop",
-	rename = "Переименовать",
-	editShortcut = "Редактировать ярлык",
-	createShortcut = "Создать ярлык",
-	addToDock = "Добавить в Dock",
-	removeFromDock = "Удалить из Dock",
-	moveRight = "Передвинуть правее",
-	moveLeft = "Передвинуть левее",
-	archive = "Добавить в архив",
-	delete = "Удалить",
-	addToFavourites = "Добавить в избранное",
-	removeFromFavourites = "Удалить из избранного",
-	setAsWallpaper = "Установить как обои",
-	showPackageContent = "Показать содержимое пакета",
-	showContainingFolder = "Открыть содержащую папку",
-	flashEEPROM = "Записать на EEPROM",
-	flashingEEPROM = "Идет запись на EEPROM. Не отключайте компьютер...",
-	print3D = "Распечатать модель",
-
-	sortBy = "Упорядочить",
-	sortByType = "По типу",
-	sortByName = "По имени",
-	sortByDate = "По дате",
-
-	aboutSystem = "О системе",
-	updates = "Обновления",
-	update = "Обновить",
-	shutdown = "Выключить",
-	logout = "Выйти",
-	reboot = "Перезагрузить",
-
-	shortcutIsCorrupted = "Ярлык ссылается на несуществующий файл",
-	sortAutomatically = "Привязать к сетке",
+	newFile = "Файл",
+	newFileFromURL = "Файл по URL-адресу",
+	newFolder = "Папка",
+	newFolderFromChosen = "Новая папка из выбранных",
+	newImage = "Изображение",
+	newName = "Новое имя",
+	newWindow = "Новое окно",
+	no = "Нет",
+	notExists = "не существует",
 	onDesktop = "На рабочем столе",
-	inCurrentDirectory = "В текущей директории",
+	open = "Открытым",
+	openWith = "Открыть с",
+	packageUnloading = "Автоматическая разгрузка",
+	paste = "Вставить",
+	pasteName = "Вставить имя",
+	path = "Дорожка",
+	print3D = "Распечатать модель",
+	properties = "Характеристики",
+	reboot = "Перезагрузить",
+	removeFromDock = "Удалить из дока",
+	removeFromFavourites = "Удалить из избранного",
+	rename = "Переименовать",
 
-	errorWhileRunningProgram = "Ошибка при выполнении ",
-	sendedFeedback = "Отчет отправлен",
-	sendFeedback = "Отправить отчет",
-	yourContacts = "Ваши контакты",
-	additionalInfo = "Дополнительная информация",
-	stackTraceback = "Стек ошибки",
-
-	favourite = "Избранное",
 	search = "Поиск",
-	mounts = "Устройства",
+	select = "Выбрать приложение…",
+	sendFeedback = "Отправить отзыв",
+	sendedFeedback = "Отзыв отправлен",
 
-	uploadToPastebin = "Загрузить на Pastebin",
-	pasteName = "Имя файла после загрузки",
-	uploading = "Идет загрузка файла...",
-	uploadingSuccess = "Загружено по ссылке ",
-	uploadingFailure = "Ошибка при загрузке: ",
+	setAsWallpaper = "Установить как обои рабочего стола",
+	shortcutIsCorrupted = "Ярлык связан с несуществующим файлом",
+	showContainingFolder = "Показать содержащую папку",
+	showPackageContent = "Показать содержимое пакета",
+	shutdown = "Неисправность",
+	size = "Размер",
+
+	sortAutomatically = "Выровнять по сетке",
+	sortBy = "Сортировать",
+	sortByDate = "По дате",
+	sortByName = "По имени",
+
+	sortByType = "По типу",
+	stackTraceback = "трассировка стека",
+	toDirectory = "в папку",
+	type = "Тип",
+	unknown = "Неизвестный",
+	update = "Обновить",
+
+	updates = "Обновления",
+	updatingFileList = "Обновление списка файлов...",
+	uploadToPastebin = "Загрузить в Pastebin",
+
+	uploading = "Выполняется загрузка...",
+	uploadingFailure = "Загрузка не удалась:",
+	uploadingSuccess = "Загружено в",
+	yes = "Да",
+	yourContacts = "Ваши контакты",
 }
