--- a/Localizations/Slovak.lang
+++ b/Localizations/Slovak.lang
@@ -1,124 +1,124 @@
 {
+	CPUArchitecture = "architektúra CPU",
+	RAMControl = "Ovládanie RAM",
+	aboutSystem = "O systéme",
+	addToDock = "Pridať do doku",
+	addToFavourites = "Pridať do obľúbených",
+	additionalInfo = "Ďalšie informácie",
+	alreadyExists = "už existuje",
+	applicationName = "Názov aplikácie",
+	applyToAll = "Použiť na všetkých",
+	archive = "Pridať do archívu",
+	areYouSure = "Si si istý?",
+	calculatingSize = "výpočet…",
+	cancel = "Zrušiť",
+	closeAllWindows = "Zatvorte všetky okná",
+	closeWindow = "Zavrieť",
+	copy = "Kopírovať",
+	copying = "Kopírovanie",
+	create = "Nový",
+	createShortcut = "Vytvoriť zástupcu",
+	cut = "Vystrihnúť",
+	date = "Dátum",
+	delete = "Odstrániť",
+	dontShowAnymore = "Už nezobrazovať",
 	downloading = "Prebieha sťahovanie",
-	CPUArchitecture = "CPU architectúra",
-	RAMControl = "RAM control",
-	packageUnloading = "Automatické odčítavanie",
-	networkFTPNewConnection = "FTP-pripojenie",
-	networkFTPConnections = "FTP-pripojenia",
+	edit = "Upraviť",
+	editInPhotoshop = "Upraviť vo Photoshope",
+	editShortcut = "Upraviť skratku",
+	emptyTrash = "Vyprázdniť odpadky",
+	errorWhileRunningProgram = "Chyba pri behu",
+	favourite = "Obľúbené",
+	faylaBlyad = "súbor",
+	file = "Súbor",
+	fileName = "Názov súboru",
+	flashEEPROM = "Flash do EEPROM",
+	flashingEEPROM = "Prebieha blikanie. ",
+	folder = "Priečinok",
+	folderName = "Názov priečinka",
+	inCurrentDirectory = "V aktuálnom priečinku",
+	inDirectory = "v priečinku",
+	keepInDock = "Držte v doku",
+	launch = "Spustiť",
+	launchWithArguments = "Spustite s argumentmi",
+	logout = "Odhlásiť sa",
+	mounts = "Držiaky",
+	moveLeft = "Presuňte sa doľava",
+	moveRight = "Pohnúť sa vpravo",
+
+	name = "názov",
+	needReplace = "Vymeňte ju?",
+	network = "sieť",
+	networkAccessDenied = "Prístup k súborovému systému vzdialeného počítača je odmietnutý. ",
+	networkAllowReadAndWrite = "Prístup k súborovému systému",
+	networkComputers = "Možnosti sieťových počítačov",
 	networkFTPAddress = "Adresa servera",
+	networkFTPConnections = "FTP pripojenia",
+	networkFTPNewConnection = "FTP pripojenie",
+	networkFTPPassword = "heslo",
+
 	networkFTPPort = "Port servera",
 	networkFTPUser = "Používateľ",
-	networkFTPPassword = "Heslo",
-	updatingFileList = "Aktualizovanie listu súborov...",
-	network = "Sieť",
-	networkTimeout = "Diaľkový ovládač nereaguje",
-	networkAccessDenied = "Prístup do systému súborov diaľkového počítača je zamietnutý. Kontaktujte jeho vlastníka pre povolenia",
-	networkAllowReadAndWrite = "Prístup do systému súborov",
-	networkModemNotAvailable = "Prichitený modem na používanie sieťových akcií",
+	networkModemNotAvailable = "Ak chcete používať sieťové funkcie, pripojte modem",
+	networkName = "Názov tohto PC",
+	networkSearchRadius = "Polomer vyhľadávania",
 	networkState = "Povoliť sieťový režim",
-	networkComputers = "Možnosti sieťových počítačov",
-	networkName = "Meno tohto počítača",
-	networkSearchRadius = "Vyhľadávací rádius",
-	openWith = "Otvoriť s",
-	select = "Vzbrať aplikáciu…",
-	keepInDock = "Ponechať v lište",
-	closeAllWindows = "Zavrieť všetky okná",
-	closeWindow = "Zavrieť",
-	newWindow = "Nové okno",
-	launch = "Spustiť",
-	launchWithArguments = "Spustiť s argumentami",
-	dontShowAnymore = "Nezobrazovať znovu",
-	newName = "Nové meno",
-	folderName = "Meno priečinka",
-	fileName = "Meno súboru",
-	applicationName = "Meno aplikácie",
-	file = "Súbor",
-	notExists = "neexistuje",
-	alreadyExists = "už existuje",
-	inDirectory = "v priečinku",
-	needReplace = "Prepísať?",
-	yes = "Áno",
-	no = "Nie",
-	cancel = "Zrušiť",
-	open = "Otvoriť",
-	applyToAll = "Použiť na všetko",
-	toDirectory = "do priečinka",
-	copying = "Kopírovanie",
-	faylaBlyad = "súbor",
-
-	areYouSure = "Ste si istý?",
-	emptyTrash = "Vyprázdniť kôš",
-	type = "Typ",
-	size = "Veľkosť",
-	date = "Dátum",
-	name = "Meno",
-	path = "Umiestnenie",
-	folder = "Priečinok",
-	unknown = "Neznáme",
-	calculatingSize = "počítanie…",
-
-	properties = "Vlastnosti",
-	newFolderFromChosen = "Nový priečinok z vybraného",
-	create = "Nový",
-	newFolder = "Priečinok",
+	networkTimeout = "Vzdialený počítač nereaguje",
+	newApplication = "Aplikácia MineOS",
 	newFile = "Súbor",
-	newFileFromURL = "Súbor z URL",
-	newImage = "Obraz",
-	newApplication = "MineOS aplikácia",
+	newFileFromURL = "Súbor z adresy URL",
+	newFolder = "Priečinok",
+	newFolderFromChosen = "Nový priečinok z vybratého",
+	newImage = "Obrázok",
+	newName = "Nové meno",
+	newWindow = "Nové okno",
+	no = "nie",
+	notExists = "neexistuje",
+	onDesktop = "Na pracovnej ploche",
+	open = "OTVORENÉ",
+	openWith = "Otvorený s",
+	packageUnloading = "Automatické vykladanie",
 	paste = "Prilepiť",
-	copy = "Kopírovať",
-	cut = "Vystrihnúť",
-	edit = "Upraviť",
-	editInPhotoshop = "Upraviť v Photoshope",
-	rename = "Premenovať",
-	editShortcut = "Upraviť odkaz",
-	createShortcut = "Vytvoriť odkaz",
-	addToDock = "Pridať do lišty",
-	removeFromDock = "Odstrániť z lišty",
-	moveRight = "Posunúť doprava",
-	moveLeft = "MPosunúť doľava",
-	archive = "Pridať do archívu",
-	delete = "Odstrániť",
-	addToFavourites = "Pridať do obľúbených",
-	removeFromFavourites = "Odstrániť z obľúbených",
-	setAsWallpaper = "Nastaviť ako tapetu",
-	showPackageContent = "Ukázať obsah balíka",
-	showContainingFolder = "Zobraziť obsahujúci priečinok",
-	flashEEPROM = "Flashnúť na EEPROM",
-	flashingEEPROM = "Flashovanie prebieha. Nevypínajte počítač...",
+	pasteName = "Vložiť názov",
+	path = "Cesta",
 	print3D = "Vytlačiť model",
-
-	sortBy = "Zoradiť",
-	sortByType = "Podľa typu",
-	sortByName = "Podľa názvu",
-	sortByDate = "Podľa dátumu",
-
-	aboutSystem = "O systéme",
-	updates = "Aktualizácie",
-	update = "Obnoviť",
-	shutdown = "Vypnúť",
-	logout = "Odhlásiť",
+	properties = "Vlastnosti",
 	reboot = "Reštartovať",
+	removeFromDock = "Odstrániť z doku",
+	removeFromFavourites = "Odstrániť z obľúbených",
+	rename = "Premenovať",
 
-	shortcutIsCorrupted = "Odkaz je priradený na neexistujúci súbor",
+	search = "Vyhľadávanie",
+	select = "Vyberte aplikáciu…",
+	sendFeedback = "Poslať spätnú väzbu",
+	sendedFeedback = "Spätná väzba bola odoslaná",
+
+	setAsWallpaper = "Nastaviť ako pozadie",
+	shortcutIsCorrupted = "Skratka je prepojená s neexistujúcim súborom",
+	showContainingFolder = "Zobraziť priečinok obsahujúci",
+	showPackageContent = "Zobraziť obsah balíka",
+	shutdown = "Vypnúť",
+	size = "Veľkosť",
+
 	sortAutomatically = "Zarovnať na mriežku",
-	onDesktop = "Na ploche",
-	inCurrentDirectory = "V tomto priečinku",
+	sortBy = "Triediť",
+	sortByDate = "Podľa dátumu",
+	sortByName = "Podľa názvu",
 
-	errorWhileRunningProgram = "Chyba pri behu programu ",
-	sendedFeedback = "Odozva bola odoslaná",
-	sendFeedback = "Odoslať odozvu",
+	sortByType = "Podľa typu",
+	stackTraceback = "Spätné sledovanie zásobníka",
+	toDirectory = "do priečinka",
+	type = "Typ",
+	unknown = "Neznámy",
+	update = "Obnoviť",
+
+	updates = "Aktualizácie",
+	updatingFileList = "Aktualizuje sa zoznam súborov...",
+	uploadToPastebin = "Nahrať do Pastebin",
+
+	uploading = "Prebieha nahrávanie...",
+	uploadingFailure = "Nahrávanie zlyhalo:",
+	uploadingSuccess = "Nahrané do",
+	yes = "Áno",
 	yourContacts = "Vaše kontakty",
-	additionalInfo = "Ďaľšie informácie",
-	stackTraceback = "Stack traceback",
-
-	favourite = "Obľúbené",
-	search = "Vyhľadávať",
-	mounts = "Disky",
-
-	uploadToPastebin = "Nahrať na Pastebin",
-	pasteName = "Meno pastu",
-	uploading = "Nahrávanie prebieha..",
-	uploadingSuccess = "Nahrané na ",
-	uploadingFailure = "Nahrávanie zlyhalo: ",
 }
