--- a/Localizations/Spanish.lang
+++ b/Localizations/Spanish.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Descarga en Progreso",
-	CPUArchitecture = "Arquitectura de la CPU",
-	RAMControl = "Control de la RAM",
-	packageUnloading = "Descarga automática",
-	networkFTPNewConnection = "Conexion FTP",
-	networkFTPConnections = "Conexiones FTP",
-	networkFTPAddress = "Acceso al servidor",
-	networkFTPPort = "Puerto del servidor",
-	networkFTPUser = "Usuario",
-	networkFTPPassword = "Contraseña",
-	updatingFileList = "Actualizando lista de Archivos...",
-	network = "Red",
-	networkTimeout = "El ordenador remoto no esta respondiendo",
-	networkAccessDenied = "Se deniega el acceso al sistema de archivos de la computadora remota. Póngase en contacto con su propietario para obtener los privilegios adecuados",
-	networkAllowReadAndWrite = "Acceso al sistema de archivos",
-	networkModemNotAvailable = "Conecte el módem para usar las funciones de red",
-	networkState = "Habilitar el modo de red",
-	networkComputers = "Opciones de red",
-	networkName = "Nombre de este PC",
-	networkSearchRadius = "Radio de Busqueda",
-	openWith = "Abrir con",
-	select = "Elegir Aplicacion…",
-	keepInDock = "Mantener en el dock",
+	CPUArchitecture = "arquitectura de la CPU",
+	RAMControl = "Control de memoria RAM",
+	aboutSystem = "Acerca del sistema",
+	addToDock = "Agregar al muelle",
+	addToFavourites = "Agregar a favoritos",
+	additionalInfo = "Información adicional",
+	alreadyExists = "ya existe",
+	applicationName = "Nombre de la aplicación",
+	applyToAll = "Aplicar a todo",
+	archive = "Añadir al archivo",
+	areYouSure = "¿Está seguro?",
+	calculatingSize = "calculador…",
+	cancel = "Cancelar",
 	closeAllWindows = "Cerrar todas las ventanas",
 	closeWindow = "Cerrar",
-	newWindow = "Nueva Ventana",
-	launch = "Ejecutar",
-	launchWithArguments = "Ejecutar con argumentos",
-	dontShowAnymore = "No mostrar otra vez",
-	newName = "Nuevo nombre",
-	folderName = "Nombre de la carpeta",
-	fileName = "Nombre del archivo",
-	applicationName = "Nombre de la aplicacion",
-	file = "Archivo",
-	notExists = "no existe",
-	alreadyExists = "ya existe",
-	inDirectory = "en directorio",
-	needReplace = "Reemplazarlo?",
-	yes = "Si",
-	no = "No",
-	cancel = "Cancelar",
-	open = "Abrir",
-	applyToAll = "Aplicar a todo",
-	toDirectory = "a carpeta",
-	copying = "Copiando",
-	faylaBlyad = "archivo",
-
-	areYouSure = "Estas Seguro?",
-	emptyTrash = "Papelera Vacia",
-	type = "Tipo",
-	size = "Tamaño",
-	date = "Fecha",
-	name = "Nombre",
-	path = "Ruta de acceso",
-	folder = "Carpeta",
-	unknown = "Desconocido",
-	calculatingSize = "calculando…",
-
-	properties = "Propiedades",
-	newFolderFromChosen = "Nueva carpeta desde Directorio",
+	copy = "Dupdo",
+	copying = "Proceso de copiar",
 	create = "Nuevo",
-	newFolder = "Carpeta",
-	newFile = "Archivo",
-	newFileFromURL = "Archivo desde URL",
-	newImage = "Imagen",
-	newApplication = "Applicacion de MineOS",
-	paste = "Pegar",
-	copy = "Copiar",
+	createShortcut = "Crear acceso directo",
 	cut = "Cortar",
+	date = "Fecha",
+	delete = "Borrar",
+	dontShowAnymore = "no volver a mostrar",
+	downloading = "Descarga en progreso",
 	edit = "Editar",
 	editInPhotoshop = "Editar en Photoshop",
-	rename = "Renombrar",
 	editShortcut = "Editar acceso directo",
-	createShortcut = "Crear acceso directo",
-	addToDock = "Añadir al dock",
-	removeFromDock = "Quitar del dock",
+	emptyTrash = "Papelera vacía",
+	errorWhileRunningProgram = "Error durante la ejecución",
+	favourite = "Favorito",
+	faylaBlyad = "expediente",
+	file = "Archivo",
+	fileName = "Nombre del archivo",
+	flashEEPROM = "Flashear a EEPROM",
+	flashingEEPROM = "Parpadeo en curso. ",
+	folder = "Carpeta",
+	folderName = "Nombre de la carpeta",
+	inCurrentDirectory = "En la carpeta actual",
+	inDirectory = "en carpeta",
+	keepInDock = "Mantener en el muelle",
+	launch = "Lanzar",
+	launchWithArguments = "Lanzar con argumentos",
+	logout = "Cerrar sesión",
+	mounts = "monturas",
+	moveLeft = "Mover hacia la izquierda",
 	moveRight = "Mover a la derecha",
-	moveLeft = "Mover a la izquierda",
-	archive = "Añadir a archivo",
-	delete = "Borrar",
-	addToFavourites = "Añadir a favoritos",
-	removeFromFavourites = "Quitar de favoritos",
-	setAsWallpaper = "Establecesr como fondo de escritorio",
-	showPackageContent = "Mostrar contenido del paquete",
-	showContainingFolder = "Mostrar contenido de la carpeta",
-	flashEEPROM = "Flashear a la EEPROM",
-	flashingEEPROM = "Flasheo en progreso, no apage el ordenador...",
-	print3D = "Imprimir Modelo",
 
-	sortBy = "Ordenar",
-	sortByType = "Por Tipo",
-	sortByName = "Por Nombre",
-	sortByDate = "Por Fecha",
+	name = "Nombre",
+	needReplace = "¿Reemplázalo?",
+	network = "Red",
+	networkAccessDenied = "Se niega el acceso al sistema de archivos de la computadora remota. ",
+	networkAllowReadAndWrite = "Acceso al sistema de archivos",
+	networkComputers = "Opciones de PC en red",
+	networkFTPAddress = "Dirección del servidor",
+	networkFTPConnections = "Conexiones FTP",
+	networkFTPNewConnection = "Conexión FTP",
+	networkFTPPassword = "Clave",
 
-	aboutSystem = "Sobre el Sistema",
-	updates = "Actualizaciones",
-	update = "Actualizar",
-	shutdown = "Apagar",
-	logout = "Cerrar Sesion",
+	networkFTPPort = "Puerto de servicio",
+	networkFTPUser = "Usuario",
+	networkModemNotAvailable = "Conecte el módem para usar las funciones de red",
+	networkName = "Nombre de esta computadora",
+	networkSearchRadius = "Radio de búsqueda",
+	networkState = "Habilitar el modo de red",
+	networkTimeout = "La computadora remota no responde",
+	newApplication = "Aplicación MineOS",
+	newFile = "Archivo",
+	newFileFromURL = "Archivo desde URL",
+	newFolder = "Carpeta",
+	newFolderFromChosen = "Nueva carpeta de elegida",
+	newImage = "Imagen",
+	newName = "Nuevo nombre",
+	newWindow = "Nueva ventana",
+	no = "No",
+	notExists = "no existe",
+	onDesktop = "en el escritorio",
+	open = "Abierto",
+	openWith = "Abrir con",
+	packageUnloading = "Descarga automática",
+	paste = "Pegar",
+	pasteName = "Pegar nombre",
+	path = "Sendero",
+	print3D = "Imprimir modelo",
+	properties = "Propiedades",
 	reboot = "Reiniciar",
+	removeFromDock = "Quitar del Muelle",
+	removeFromFavourites = "Quitar de favoritos",
+	rename = "Rebautizar",
 
-	shortcutIsCorrupted = "El Acceso Directo esta linkeado a un archivo que no existe",
-	sortAutomatically = "Alinear a la Cuadricula",
-	onDesktop = "En el Escritorio",
-	inCurrentDirectory = "En la Carpeta Actual",
+	search = "Búsqueda",
+	select = "Elija la aplicación…",
+	sendFeedback = "Enviar comentarios",
+	sendedFeedback = "Se enviaron comentarios",
 
-	errorWhileRunningProgram = "Error al ejecutar ",
-	sendedFeedback = "La Opinion ha sido Enviada",
-	sendFeedback = "Enviar Opinion",
-	yourContacts = "Tus Contactos",
-	additionalInfo = "Informacion Adicional",
-	stackTraceback = "Seguimiento de pila",
+	setAsWallpaper = "Establecer como fondo de pantalla",
+	shortcutIsCorrupted = "El acceso directo está vinculado a un archivo inexistente",
+	showContainingFolder = "Mostrar carpeta contenedora",
+	showPackageContent = "Mostrar contenido del paquete",
+	shutdown = "Apagar",
+	size = "Tamaño",
 
-	favourite = "Favoritos",
-	search = "Buscar",
-	mounts = "Mounts",
+	sortAutomatically = "Alinear a la red",
+	sortBy = "Clasificar",
+	sortByDate = "Por fecha",
+	sortByName = "Por nombre",
 
+	sortByType = "Por tipo",
+	stackTraceback = "Rastreo de pila",
+	toDirectory = "a la carpeta",
+	type = "Tipo",
+	unknown = "Desconocido",
+	update = "Actualizar",
+
+	updates = "Actualizaciones",
+	updatingFileList = "Actualizando la lista de archivos...",
 	uploadToPastebin = "Subir a Pastebin",
-	pasteName = "Paste name",
-	uploading = "Subiendo...",
-	uploadingSuccess = "Subido a ",
-	uploadingFailure = "Subida Fallida: ",
+
+	uploading = "Subiendo en curso...",
+	uploadingFailure = "Carga fallida:",
+	uploadingSuccess = "Subido a",
+	yes = "Sí",
+	yourContacts = "Sus contactos",
 }
