--- a/Localizations/Ukrainian.lang
+++ b/Localizations/Ukrainian.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Виконується завантаження",
 	CPUArchitecture = "Архітектура процесора",
-	RAMControl = "Контроль оперативної пам'яті ",
-	packageUnloading = "Автоматичне розвантаження",
-	networkFTPNewConnection = "FTP-з'єднання",
-	networkFTPConnections = "FTP-підключення",
-	networkFTPAddress = "Адреса сервера",
-	networkFTPPort = "Порт сервера",
-	networkFTPUser = "Користувач",
-	networkFTPPassword = "Пароль",
-	updatingFileList = "Оновлення списку файлів...",
-	network = "Мережа",
-	networkTimeout = "Віддалений комп'ютер не відповідає",
-	networkAccessDenied = "Доступ до файлової системи віддаленого комп'ютера заборонений. Зв'яжіться з його власником, щоб отримати відповідні привілеї",
-	networkAllowReadAndWrite = "Доступ до файлової системи ",
-	networkModemNotAvailable = "Підключення модему для використання мережевих функцій",
-	networkState = "Включити мережевий режим",
-	networkComputers = "Параметри мережевих ПК",
-	networkName = "Ім'я цього ПК",
-	networkSearchRadius = "Радіус пошуку",
-	openWith = "Відкрити за допомогою",
-	select = "Вибрати додаток…",
-	keepInDock = "Зберігати в доці",
-	closeAllWindows = "Закрити всі вікна",
+	RAMControl = "Керування оперативною пам'яттю",
+	aboutSystem = "Про систему",
+	addToDock = "Додати в Dock",
+	addToFavourites = "Додати до вибраного",
+	additionalInfo = "Додаткова інформація",
+	alreadyExists = "вже існує",
+	applicationName = "Назва програми",
+	applyToAll = "Застосовувати до всіх",
+	archive = "Додати до архіву",
+	areYouSure = "Ти впевнений?",
+	calculatingSize = "обчислення…",
+	cancel = "Скасувати",
+	closeAllWindows = "Закрийте всі вікна",
 	closeWindow = "Закрити",
-	newWindow = "Нове вікно",
+	copy = "Копія",
+	copying = "Копіювання",
+	create = "Новий",
+	createShortcut = "Створити ярлик",
+	cut = "Вирізати",
+	date = "Дата",
+	delete = "Видалити",
+	dontShowAnymore = "Не показувати знову",
+	downloading = "Триває завантаження",
+	edit = "Редагувати",
+	editInPhotoshop = "Редагувати в Photoshop",
+	editShortcut = "Редагувати ярлик",
+	emptyTrash = "Опустіть сміття",
+	errorWhileRunningProgram = "Помилка під час роботи",
+	favourite = "Улюблений",
+	faylaBlyad = "файл",
+	file = "Файл",
+	fileName = "Ім'я файлу",
+	flashEEPROM = "Flash на EEPROM",
+	flashingEEPROM = "Триває блимання. ",
+	folder = "папка",
+	folderName = "Назва папки",
+	inCurrentDirectory = "У поточній папці",
+	inDirectory = "в папці",
+	keepInDock = "Тримайте в доці",
 	launch = "Запуск",
 	launchWithArguments = "Запуск з аргументами",
-	dontShowAnymore = "Більше не показувати",
-	newName = "Нове ім'я",
-	folderName = "Ім'я папки",
-	fileName = "Ім'я файлу",
-	applicationName = "Ім'я програми",
-	file = "Файл",
-	notExists = "не існує",
-	alreadyExists = "вже існує",
-	inDirectory = "в директорії",
-	needReplace = "Замінити його?",
-	yes = "Так",
-	no = "Ні",
-	cancel = "Відмінити",
-	open = "Відкрити",
-	applyToAll = "Застосувати до всіх",
-	toDirectory = "в каталозі",
-	copying = "Копіювання",
-	faylaBlyad = "файла",
+	logout = "Вийти",
+	mounts = "Кріплення",
+	moveLeft = "Рухайтеся вліво",
+	moveRight = "Рухайтеся вправо",
 
-	areYouSure = "Ви впевнені?",
-	emptyTrash = "Очистити кошик",
-	type = "Тип",
-	size = "Розмір",
-	date = "Дата",
 	name = "Ім'я",
-	path = "Шлях",
-	folder = "Папка",
-	unknown = "Невідомо",
-	calculatingSize = "йде підрахунок…",
+	needReplace = "Замінити його?",
+	network = "мережа",
+	networkAccessDenied = "Доступ до файлової системи віддаленого комп’ютера заборонено. ",
+	networkAllowReadAndWrite = "Доступ до файлової системи",
+	networkComputers = "Опції мережевих ПК",
+	networkFTPAddress = "Адреса сервера",
+	networkFTPConnections = "FTP-з'єднання",
+	networkFTPNewConnection = "FTP-з'єднання",
+	networkFTPPassword = "Пароль",
 
-	properties = "Властивості",
-	newFolderFromChosen = "Нова папка з обраного",
-	create = "Створити",
-	newFolder = "Папку",
+	networkFTPPort = "Порт сервера",
+	networkFTPUser = "Користувач",
+	networkModemNotAvailable = "Підключіть модем, щоб використовувати функції мережі",
+	networkName = "Назва цього ПК",
+	networkSearchRadius = "Радіус пошуку",
+	networkState = "Увімкнути мережевий режим",
+	networkTimeout = "Віддалений комп’ютер не відповідає",
+	newApplication = "Додаток MineOS",
 	newFile = "Файл",
-	newFileFromURL = "Файл з URL",
+	newFileFromURL = "Файл із URL-адреси",
+	newFolder = "папка",
+	newFolderFromChosen = "Нова папка з вибраної",
 	newImage = "Зображення",
-	newApplication = "Додаток MineOS ",
-	paste = "Вставити",
-	copy = "Копіювати",
-	cut = "Вирізати",
-	edit = "Редагувати",
-	editInPhotoshop = "Редагування в Photoshop",
-	rename = "Перейменувати",
-	editShortcut = "Змінити ярлик",
-	createShortcut = "Створити ярлик",
-	addToDock = "Додати в док",
-	removeFromDock = "Видалити з док",
-	moveRight = "Перемістити вправо",
-	moveLeft = "Перемістити вліво",
-	archive = "Додати в архів",
-	delete = "Видалити",
-	addToFavourites = "Додати в обране",
-	removeFromFavourites = "Видалити з обраного",
-	setAsWallpaper = "Встановити в якості шпалер",
-	showPackageContent = "Показати вміст пакету",
-	showContainingFolder = "Показати папку",
-	flashEEPROM = "Записати на EEPROM",
-	flashingEEPROM = "Запис в процесі. Не вимикайте комп'ютер...",
-	print3D = "Роздрукувати модель",
-	
-	sortBy = "Сортувати",
-	sortByType = "По типу",
-	sortByName = "По імені",
-	sortByDate = "По даті",
-
-	aboutSystem = "Про систему",
-	updates = "Оновлення",
-	update = "Оновити",
-	shutdown = "Вимкнути",
-	logout = "Вихід із системи",
-	reboot = "Перезавантажити",
-
-	shortcutIsCorrupted = "Ярлик пов'язаний з неіснуючим файлом",
-	sortAutomatically = "Вирівняти по сітці",
+	newName = "Нова назва",
+	newWindow = "Нове вікно",
+	no = "Ні",
+	notExists = "не існує",
 	onDesktop = "На робочому столі",
-	inCurrentDirectory = "В поточному каталозі",
+	open = "ВІДЧИНЕНО",
+	openWith = "Відкрити за допомогою",
+	packageUnloading = "Автоматичне розвантаження",
+	paste = "Вставити",
+	pasteName = "Вставити назву",
+	path = "Шлях",
+	print3D = "Модель для друку",
+	properties = "Властивості",
+	reboot = "Перезавантажте",
+	removeFromDock = "Видалити з Dock",
+	removeFromFavourites = "Видалити з вибраного",
+	rename = "Перейменувати",
 
-	errorWhileRunningProgram = "Помилка під час роботи ",
-	sendedFeedback = "Звіт відправлений",
-	sendFeedback = "Відправити звіт",
-	yourContacts = "Ваші контакти",
-	additionalInfo = "Додаткова інформація",
-	stackTraceback = "Стек помилки",
-
-	favourite = "Вибране",
 	search = "Пошук",
-	mounts = "Пристрої",
+	select = "Виберіть додаток…",
+	sendFeedback = "Надіслати відгук",
+	sendedFeedback = "Відгук надіслано",
 
-	uploadToPastebin = "Завантажити на Pastebin",
-	pasteName = "Вставити ім'я",
-	uploading = "Йде завантаження...",
-	uploadingSuccess = "Завантажено в ",
-	uploadingFailure = "Помилка при завантаженні: ",
+	setAsWallpaper = "Встановити як шпалери",
+	shortcutIsCorrupted = "Ярлик пов’язаний з неіснуючим файлом",
+	showContainingFolder = "Показати, що містить папку",
+	showPackageContent = "Показати вміст пакета",
+	shutdown = "Закрити",
+	size = "Розмір",
+
+	sortAutomatically = "Вирівняти по сітці",
+	sortBy = "Сортувати",
+	sortByDate = "За датою",
+	sortByName = "По імені",
+
+	sortByType = "За типом",
+	stackTraceback = "Відстеження стека",
+	toDirectory = "до папки",
+	type = "Тип",
+	unknown = "Невідомо",
+	update = "Оновити",
+
+	updates = "Оновлення",
+	updatingFileList = "Оновлення списку файлів...",
+	uploadToPastebin = "Завантажте в Pastebin",
+
+	uploading = "Триває завантаження...",
+	uploadingFailure = "Не вдалося завантажити:",
+	uploadingSuccess = "Завантажено до",
+	yes = "Так",
+	yourContacts = "Ваші контакти",
 }
