--- a/Localizations/Belarusian.lang
+++ b/Localizations/Belarusian.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Ідзе загрузка файла",
 	CPUArchitecture = "Архітэктура працэсара",
-	RAMControl = "Кіраванне памяццю",
-	packageUnloading = "Аўтаматычная выгрузка",
-	networkFTPNewConnection = "FTP-падлучэнне",
-	networkFTPConnections = "FTP-падлучэння",
-	networkFTPAddress = "Адрас сервера",
-	networkFTPPort = "Порт сервера",
-	networkFTPUser = "Карыстальнік",
-	networkFTPPassword = "Пароль",
-	updatingFileList = "Абнаўленне спісу файлаў...",
-	network = "Сетка",
-	networkTimeout = "Аддалены кампутар не адказаў на запыт",
-	networkAccessDenied = "Доступ да файлавай сістэмы аддаленага кампутара забаронены. Звяжыцеся з яго ўладальнікам для прадастаўлення адпаведных прывілеяў",
-	networkAllowReadAndWrite = "Доступ да файлаў",
-	networkModemNotAvailable = "Падключыце мадэм для выкарыстання сеткавых функцый",
-	networkState = "Уключыць сеткавы рэжым",
-	networkComputers = "Параметры аддаленых ПК",
-	networkName = "Імя дадзенага ПК",
-	networkSearchRadius = "Радыус выяўлення",
-	openWith = "Адкрыць з дапамогай",
-	select = "Выбраць праграму…",
-	keepInDock = "Пакінуць у Dock",
-	closeAllWindows = "Зачыніць усе вокны",
-	closeWindow = "Зачыніць",
-	newWindow = "Новае акно",
-	launch = "Запусціць",
-	launchWithArguments = "Запусціць з аргументамі",
-	dontShowAnymore = "Больш не паказваць",
-	newName = "Новае імя",
-	folderName = "Імя тэчкі",
-	fileName = "Імя файла",
-	applicationName = "Назва дадатку",
-	file = "Файл",
-	notExists = "не існуе",
+	RAMControl = "Кіраванне аператыўнай памяці",
+	aboutSystem = "Пра сістэму",
+	addToDock = "Дадаць у Dock",
+	addToFavourites = "Дадаць у абранае",
+	additionalInfo = "Дадатковая інфармацыя",
 	alreadyExists = "ужо існуе",
-	inDirectory = "у дырэкторыі",
-	needReplace = "Замяніць?",
-	yes = "Так",
-	no = "Не",
-	cancel = "Адмена",
-	open = "Адкрыць",
-	applyToAll = "Ужыць да ўсіх",
-	toDirectory = "у дырэкторыі",
-	copying = "Капіяванне",
-	faylaBlyad = "файла",
-
-	areYouSure = "Вы ўпэўненыя?",
-	emptyTrash = "Ачысціць сметнік",
-	type = "Тып",
-	size = "Памер",
-	date = "Дата",
-	name = "Імя",
-	path = "Шлях",
-	folder = "Тэчка",
-	unknown = "Невядома",
-	calculatingSize = "ідзе падлік…",
-
-	properties = "Уласцівасці",
-	newFolderFromChosen = "Новая тэчка з вылучанага",
-	create = "Стварыць",
-	newFolder = "Тэчку",
-	newFile = "Файл",
-	newFileFromURL = "Файл па URL",
-	newImage = "Малюнак",
-	newApplication = "Прыкладанне MineOS",
-	paste = "Уставіць",
-	copy = "Капіяваць",
+	applicationName = "Назва прыкладання",
+	applyToAll = "Ўжываць да ўсіх",
+	archive = "Дадаць у архіў",
+	areYouSure = "Вы ўпэўнены?",
+	calculatingSize = "разлік…",
+	cancel = "Адмяніць",
+	closeAllWindows = "Зачыніце ўсе вокны",
+	closeWindow = "Закрыць",
+	copy = "Копія",
+	copying = "Капіраванне",
+	create = "Новае",
+	createShortcut = "Стварыць ярлык",
 	cut = "Выразаць",
+	date = "Дата",
+	delete = "Выдаліць",
+	dontShowAnymore = "Больш не паказваць",
+	downloading = "Ідзе спампоўка",
 	edit = "Рэдагаваць",
 	editInPhotoshop = "Рэдагаваць у Photoshop",
-	rename = "Перайменаваць",
 	editShortcut = "Рэдагаваць ярлык",
-	createShortcut = "Стварыць ярлык",
-	addToDock = "Дадаць у Dock",
+	emptyTrash = "Апусціце смецце",
+	errorWhileRunningProgram = "Памылка падчас працы",
+	favourite = "Любімая",
+	faylaBlyad = "файл",
+	file = "Файл",
+	fileName = "Імя файла",
+	flashEEPROM = "Флэш ў EEPROM",
+	flashingEEPROM = "Ідзе мірганне. ",
+	folder = "Папка",
+	folderName = "Імя тэчкі",
+	inCurrentDirectory = "У бягучай тэчцы",
+	inDirectory = "у тэчцы",
+	keepInDock = "Трымайце ў доку",
+	launch = "Запуск",
+	launchWithArguments = "Запуск з аргументамі",
+	logout = "Выхад",
+	mounts = "Мац",
+	moveLeft = "Рухайцеся налева",
+	moveRight = "Рухайцеся направа",
+
+	name = "Імя",
+	needReplace = "Замяніць яго?",
+	network = "Сетка",
+	networkAccessDenied = "Доступ да файлавай сістэмы аддаленага кампутара забаронены. ",
+	networkAllowReadAndWrite = "Доступ да файлавай сістэмы",
+	networkComputers = "Параметры сеткавых ПК",
+	networkFTPAddress = "Адрас сервера",
+	networkFTPConnections = "FTP-злучэнні",
+	networkFTPNewConnection = "FTP-злучэнне",
+	networkFTPPassword = "Пароль",
+
+	networkFTPPort = "Порт сервера",
+	networkFTPUser = "Карыстальнік",
+	networkModemNotAvailable = "Каб выкарыстоўваць сеткавыя функцыі, падключыце мадэм",
+	networkName = "Імя гэтага ПК",
+	networkSearchRadius = "Радыус пошуку",
+	networkState = "Уключыць рэжым сеткі",
+	networkTimeout = "Аддалены кампутар не адказвае",
+	newApplication = "Прыкладанне mineos",
+	newFile = "Файл",
+	newFileFromURL = "Файл з URL",
+	newFolder = "Папка",
+	newFolderFromChosen = "Новая папка з выбранага",
+	newImage = "Малюнак",
+	newName = "Новая назва",
+	newWindow = "Новае акно",
+	no = "не",
+	notExists = "не існуе",
+	onDesktop = "На працоўны стол",
+	open = "Адкрыць",
+	openWith = "Адкрыць з",
+	packageUnloading = "Аўтаматычная разгрузка",
+	paste = "Ўставіць",
+	pasteName = "Уставіць імя",
+	path = "Шлях",
+	print3D = "Друкаваная мадэль",
+	properties = "Уласцівасці",
+	reboot = "Перазагрузка",
 	removeFromDock = "Выдаліць з Dock",
-	moveRight = "Перасунуць правей",
-	moveLeft = "Перасунуць лявей",
-	archive = "Дадаць у архіў",
-	delete = "Выдаліць",
-	addToFavourites = "Дадаць у абранае",
 	removeFromFavourites = "Выдаліць з абранага",
-	setAsWallpaper = "Усталяваць як шпалеры",
-	showPackageContent = "Паказаць змесціва пакета",
-	showContainingFolder = "Адкрыць змяшчае тэчку",
-	flashEEPROM = "Запісаць на EEPROM",
-	flashingEEPROM = "Ідзе запіс на EEPROM. Ня адключайце кампутар...",
-	print3D = "Раздрукаваць мадэль",
+	rename = "Перайменаваць",
 
-	sortBy = "Упарадкаваць",
-	sortByType = "Па тыпу",
-	sortByName = "Па імя",
-	sortByDate = "Па даце",
-
-	aboutSystem = "Аб сістэме",
-	updates = "Абнаўленне",
-	update = "Абнавіць",
-	shutdown = "Выключыць",
-	logout = "Выйсці",
-	reboot = "Перазагрузіць",
-
-	shortcutIsCorrupted = "Ярлык спасылаецца на неіснуючы файл",
-	sortAutomatically = "Прывязаць да сеткі",
-	onDesktop = "На працоўным стале",
-	inCurrentDirectory = "У дзеючай дырэкторыі",
-
-	errorWhileRunningProgram = "Памылка пры выкананні ",
-	sendedFeedback = "Справаздача адпраўлена",
-	sendFeedback = "Адправіць справаздачу",
-	yourContacts = "Вашы кантакты",
-	additionalInfo = "Дадатковая інфармацыя",
-	stackTraceback = "Стэк памылкі",
-
-	favourite = "Абранае",
 	search = "Пошук",
-	mounts = "Прылады",
+	select = "Выберыце прыкладанне…",
+	sendFeedback = "Адправіць водгук",
+	sendedFeedback = "Зваротная сувязь была адпраўлена",
 
-	uploadToPastebin = "Загрузіць на Pastebin",
-	pasteName = "Імя файла пасля загрузкі",
-	uploading = "Ідзе загрузка файла...",
-	uploadingSuccess = "Загружана па спасылцы ",
-	uploadingFailure = "Памылка пры загрузцы: ",
+	setAsWallpaper = "Ўсталяваць у якасці шпалер",
+	shortcutIsCorrupted = "Ярлык спасылаецца на неіснуючы файл",
+	showContainingFolder = "Паказаць, якая змяшчае папку",
+	showPackageContent = "Паказаць змесціва пакета",
+	shutdown = "Адключэнне",
+	size = "Памер",
+
+	sortAutomatically = "Выраўнаваць па сетцы",
+	sortBy = "Сартаваць",
+	sortByDate = "Па даце",
+	sortByName = "Па імені",
+
+	sortByType = "Па тыпу",
+	stackTraceback = "Адсочванне стэка",
+	toDirectory = "у тэчку",
+	type = "Тып",
+	unknown = "Невядомы",
+	update = "Абнавіць",
+
+	updates = "Абнаўленні",
+	updatingFileList = "Абнаўляецца спіс файлаў...",
+	uploadToPastebin = "Загрузіць у Pastebin",
+
+	uploading = "Ідзе загрузка...",
+	uploadingFailure = "Памылка запампоўкі:",
+	uploadingSuccess = "Загружана на",
+	yes = "Так",
+	yourContacts = "Вашы кантакты",
 }
