--- a/Localizations/Finnish.lang
+++ b/Localizations/Finnish.lang
@@ -1,124 +1,124 @@
 {
-	downloading = "Lataus käynnissä",
-	CPUArchitecture = "Prosessoriarkkitehtuuri",
-	RAMControl = "Muistikontrolli",
-	packageUnloading = "Automaattinen purku",
-	networkFTPNewConnection = "FTP-yhteys",
-	networkFTPConnections = "FTP-yhteydet",
-	networkFTPAddress = "Palvelimen osoite",
-	networkFTPPort = "Palvelinportti",
-	networkFTPUser = "Käyttäjä",
-	networkFTPPassword = "Salasana",
-	updatingFileList = "Päivitetään tiedostolistaa...",
-	network = "Verkko",
-	networkTimeout = "Etätietokone ei vastaa",
-	networkAccessDenied = "Pääsy etätietokoneen tiedostojärjestelmään on evätty. Ota yhteyttä sen omistajaan saadasesi oikeudet",
-	networkAllowReadAndWrite = "Tiedostojärjestelmään pääsy",
-	networkModemNotAvailable = "Liitä modeemi käyttääksesi verkkotoimintoja",
-	networkState = "Salli verkkotila",
-	networkComputers = "Verkkotietokoneen asetukset",
-	networkName = "Tämän tietokoneen nimi",
-	networkSearchRadius = "Hakuetäisyys",
-	openWith = "Avaa sovelluksella",
-	select = "Valitse sovellus…",
-	keepInDock = "Pidä työkalurivissä",
-	closeAllWindows = "Sulje kaikki ikkunat",
-	closeWindow = "Sulje",
-	newWindow = "Uusi ikkuna",
-	launch = "Suorita",
-	launchWithArguments = "Suorita argumenttien kanssa",
-	dontShowAnymore = "Älä näytä toiste",
-	newName = "Uusi nimi",
-	folderName = "Kansion nimi",
-	fileName = "Tiedoston nimi",
-	applicationName = "Sovelluksen nimi",
-	file = "Tiedosto",
-	notExists = "ei ole olemassa",
-	alreadyExists = "on jo olemassa",
-	inDirectory = "kansiossa",
-	needReplace = "Korjaa se?",
-	yes = "Kyllä",
-	no = "Ei",
-	cancel = "Peruuta",
-	open = "Avaa",
-	applyToAll = "Toteuta kaikille",
-	toDirectory = "kansiosta",
-	copying = "Kopioidaan",
-	faylaBlyad = "tiedosto",
-
-	areYouSure = "Oletko varma?",
-	emptyTrash = "Tyhjää roskakori",
-	type = "Tyyppi",
-	size = "Koko",
-	date = "Date",
-	name = "Nimi",
-	path = "Polku",
-	folder = "Kansio",
-	unknown = "Tuntematon",
-	calculatingSize = "lasketaan…",
-
-	properties = "Ominaisuudet",
-	newFolderFromChosen = "Uusi kansio valinnasta",
-	create = "Uusi",
-	newFolder = "Kansio",
-	newFile = "Tiedosto",
-	newFileFromURL = "Tiedosto verkosta",
-	newImage = "Kuva",
-	newApplication = "MineOS-sovellus",
-	paste = "Liitä",
-	copy = "Kopioi",
-	cut = "Leikkaa",
-	edit = "Muokkaa",
-	editInPhotoshop = "Muokkaa Photoshopilla",
-	rename = "Nimeä uudestaan",
-	editShortcut = "Muokkaa pikakuvaketta",
-	createShortcut = "Luo pikakuvake",
-	addToDock = "Lisää työkaluriviin",
-	removeFromDock = "Poista työkalurivistä",
-	moveRight = "Siirrä oikealle",
-	moveLeft = "Siirrä vasemmalle",
-	archive = "Lisää arkistoon",
-	delete = "Poista",
+	CPUArchitecture = "CPU-arkkitehtuuri",
+	RAMControl = "RAM-ohjaus",
+	aboutSystem = "Tietoja järjestelmästä",
+	addToDock = "Lisää Dockiin",
 	addToFavourites = "Lisää suosikkeihin",
-	removeFromFavourites = "Poista suosikeista",
-	setAsWallpaper = "Aseta taustakuvaksi",
-	showPackageContent = "Näytä paketin sisältö",
-	showContainingFolder = "Näytä sisältävä tiedosto",
-	flashEEPROM = "Polta EEPROMiin",
-	flashingEEPROM = "Poltto käynnissä, älä sammuta tietokonetta...",
-	print3D = "Tulosta malli",
-
-	sortBy = "Lajittele",
-	sortByType = "Tyypin mukaan",
-	sortByName = "Nimen mukaan",
-	sortByDate = "Päivämärän mukaan",
-
-	aboutSystem = "Tietoja...",
-	updates = "Päivitykset",
-	update = "Päivitä",
-	shutdown = "Sammuta tietokone",
-	logout = "Kirjaudu ulos",
-	reboot = "Käynnistä uudelleen",
-
-	shortcutIsCorrupted = "Lähdetiedosto puuttuu",
-	sortAutomatically = "Ruudukoi",
-	onDesktop = "Työpöydällä",
-	inCurrentDirectory = "Tämänhetkisessä tiedostossa",
-
-	errorWhileRunningProgram = "Virhe suorittaessa ",
-	sendedFeedback = "Palaute lähetetty",
-	sendFeedback = "Lähetä palautetta",
-	yourContacts = "Yhteystietosi",
-	additionalInfo = "Lisätiedot",
-	stackTraceback = "Pinon jäljitys",
-
+	additionalInfo = "Lisäinformaatio",
+	alreadyExists = "on jo olemassa",
+	applicationName = "Sovelluksen nimi",
+	applyToAll = "Koskee kaikkia",
+	archive = "Lisää arkistoon",
+	areYouSure = "Oletko varma?",
+	calculatingSize = "lasketaan…",
+	cancel = "Peruuttaa",
+	closeAllWindows = "Sulje kaikki ikkunat",
+	closeWindow = "kiinni",
+	copy = "Kopio",
+	copying = "Kopioidaan",
+	create = "Uusi",
+	createShortcut = "Luo pikakuvake",
+	cut = "Leikata",
+	date = "Päivämäärä",
+	delete = "Poistaa",
+	dontShowAnymore = "Älä näytä uudelleen",
+	downloading = "Lataus käynnissä",
+	edit = "Muokata",
+	editInPhotoshop = "Muokkaa Photoshopissa",
+	editShortcut = "Muokkaa pikakuvaketta",
+	emptyTrash = "Tyhjennä roskat",
+	errorWhileRunningProgram = "Virhe ajon aikana",
 	favourite = "Suosikki",
-	search = "Haku",
-	mounts = "Asemat",
+	faylaBlyad = "tiedosto",
+	file = "Tiedosto",
+	fileName = "Tiedoston nimi",
+	flashEEPROM = "Flash EEPROMiin",
+	flashingEEPROM = "Vilkkuminen käynnissä. ",
+	folder = "Kansio",
+	folderName = "Kansion nimi",
+	inCurrentDirectory = "Nykyisessä kansiossa",
+	inDirectory = "kansiossa",
+	keepInDock = "Pidä telakassa",
+	launch = "Tuoda markkinoille",
+	launchWithArguments = "Aloita argumenteilla",
+	logout = "Kirjautua ulos",
+	mounts = "Kiinnikkeet",
+	moveLeft = "Siirry vasemmalle",
+	moveRight = "Liiku oikealle",
 
+	name = "Nimi",
+	needReplace = "Korvaa se?",
+	network = "Verkko",
+	networkAccessDenied = "Pääsy etätietokoneen tiedostojärjestelmään on estetty. ",
+	networkAllowReadAndWrite = "Pääsy tiedostojärjestelmään",
+	networkComputers = "Verkko-PC-vaihtoehdot",
+	networkFTPAddress = "Palvelimen osoite",
+	networkFTPConnections = "FTP-yhteydet",
+	networkFTPNewConnection = "FTP-yhteys",
+	networkFTPPassword = "Salasana",
+
+	networkFTPPort = "Palvelimen portti",
+	networkFTPUser = "Käyttäjä",
+	networkModemNotAvailable = "Liitä modeemi käyttääksesi verkkotoimintoja",
+	networkName = "Tämän PC:n nimi",
+	networkSearchRadius = "Haun säde",
+	networkState = "Ota verkkotila käyttöön",
+	networkTimeout = "Etätietokone ei vastaa",
+	newApplication = "MineOS sovellus",
+	newFile = "Tiedosto",
+	newFileFromURL = "Tiedosto URL-osoitteesta",
+	newFolder = "Kansio",
+	newFolderFromChosen = "Uusi kansio valitusta",
+	newImage = "Kuva",
+	newName = "Uusi nimi",
+	newWindow = "Uusi ikkuna",
+	no = "Ei",
+	notExists = "ei ole olemassa",
+	onDesktop = "työpöydällä",
+	open = "Avata",
+	openWith = "Avaa",
+	packageUnloading = "Automaattinen purku",
+	paste = "Liitä",
+	pasteName = "Liitä nimi",
+	path = "Polku",
+	print3D = "Tulostusmalli",
+	properties = "Ominaisuudet",
+	reboot = "Käynnistä uudelleen",
+	removeFromDock = "Poista Dockista",
+	removeFromFavourites = "Poista suosikeista",
+	rename = "Nimeä uudelleen",
+
+	search = "Hae",
+	select = "Valitse sovellus…",
+	sendFeedback = "Lähetä palautetta",
+	sendedFeedback = "Palautetta lähetetty",
+
+	setAsWallpaper = "Aseta taustakuvaksi",
+	shortcutIsCorrupted = "Pikakuvake on linkitetty olemattomaan tiedostoon",
+	showContainingFolder = "Näytä sisältävä kansio",
+	showPackageContent = "Näytä paketin sisältö",
+	shutdown = "Sammuttaa",
+	size = "Koko",
+
+	sortAutomatically = "Kohdista ruudukkoon",
+	sortBy = "Järjestellä",
+	sortByDate = "Päivämäärän mukaan",
+	sortByName = "Nimeltä",
+
+	sortByType = "Tyypin mukaan",
+	stackTraceback = "Pinon jäljitys",
+	toDirectory = "kansioon",
+	type = "Tyyppi",
+	unknown = "Tuntematon",
+	update = "virkistää",
+
+	updates = "Päivitykset",
+	updatingFileList = "Päivitetään tiedostoluetteloa...",
 	uploadToPastebin = "Lataa Pastebiniin",
-	pasteName = "Paste-nimi",
-	uploading = "Lataus käynnissä...",
-	uploadingSuccess = "Ladattu ",
-	uploadingFailure = "Lataus epäonnistui: ",
+
+	uploading = "Lähetys käynnissä...",
+	uploadingFailure = "Lataus epäonnistui:",
+	uploadingSuccess = "Lähetetty kohteeseen",
+	yes = "Joo",
+	yourContacts = "Yhteystietosi",
 }
